@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2009 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,26 +16,21 @@
 
 package org.springframework.util;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.rmi.ConnectException;
 import java.rmi.RemoteException;
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
-import org.junit.Ignore;
-import org.junit.Test;
-import org.springframework.beans.TestBean;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+
+import org.springframework.tests.sample.objects.TestObject;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 
 /**
  * @author Rob Harrop
@@ -43,214 +38,190 @@ import org.springframework.beans.TestBean;
  * @author Sam Brannen
  * @author Arjen Poutsma
  */
-public class ReflectionUtilsTests {
+class ReflectionUtilsTests {
 
 	@Test
-	public void findField() {
-		Field field = ReflectionUtils.findField(TestBeanSubclassWithPublicField.class, "publicField", String.class);
-		assertNotNull(field);
-		assertEquals("publicField", field.getName());
-		assertEquals(String.class, field.getType());
-		assertTrue("Field should be public.", Modifier.isPublic(field.getModifiers()));
+	void findField() {
+		Field field = ReflectionUtils.findField(TestObjectSubclassWithPublicField.class, "publicField", String.class);
+		assertThat(field).isNotNull();
+		assertThat(field.getName()).isEqualTo("publicField");
+		assertThat(field.getType()).isEqualTo(String.class);
+		assertThat(Modifier.isPublic(field.getModifiers())).as("Field should be public.").isTrue();
 
-		field = ReflectionUtils.findField(TestBeanSubclassWithNewField.class, "prot", String.class);
-		assertNotNull(field);
-		assertEquals("prot", field.getName());
-		assertEquals(String.class, field.getType());
-		assertTrue("Field should be protected.", Modifier.isProtected(field.getModifiers()));
+		field = ReflectionUtils.findField(TestObjectSubclassWithNewField.class, "prot", String.class);
+		assertThat(field).isNotNull();
+		assertThat(field.getName()).isEqualTo("prot");
+		assertThat(field.getType()).isEqualTo(String.class);
+		assertThat(Modifier.isProtected(field.getModifiers())).as("Field should be protected.").isTrue();
 
-		field = ReflectionUtils.findField(TestBeanSubclassWithNewField.class, "name", String.class);
-		assertNotNull(field);
-		assertEquals("name", field.getName());
-		assertEquals(String.class, field.getType());
-		assertTrue("Field should be private.", Modifier.isPrivate(field.getModifiers()));
+		field = ReflectionUtils.findField(TestObjectSubclassWithNewField.class, "name", String.class);
+		assertThat(field).isNotNull();
+		assertThat(field.getName()).isEqualTo("name");
+		assertThat(field.getType()).isEqualTo(String.class);
+		assertThat(Modifier.isPrivate(field.getModifiers())).as("Field should be private.").isTrue();
 	}
 
 	@Test
-	public void setField() {
-		final TestBeanSubclassWithNewField testBean = new TestBeanSubclassWithNewField();
-		final Field field = ReflectionUtils.findField(TestBeanSubclassWithNewField.class, "name", String.class);
+	void setField() {
+		TestObjectSubclassWithNewField testBean = new TestObjectSubclassWithNewField();
+		Field field = ReflectionUtils.findField(TestObjectSubclassWithNewField.class, "name", String.class);
 
 		ReflectionUtils.makeAccessible(field);
 
 		ReflectionUtils.setField(field, testBean, "FooBar");
-		assertNotNull(testBean.getName());
-		assertEquals("FooBar", testBean.getName());
+		assertThat(testBean.getName()).isNotNull();
+		assertThat(testBean.getName()).isEqualTo("FooBar");
 
 		ReflectionUtils.setField(field, testBean, null);
-		assertNull(testBean.getName());
-	}
-
-	@Test(expected = IllegalStateException.class)
-	public void setFieldIllegal() {
-		final TestBeanSubclassWithNewField testBean = new TestBeanSubclassWithNewField();
-		final Field field = ReflectionUtils.findField(TestBeanSubclassWithNewField.class, "name", String.class);
-		ReflectionUtils.setField(field, testBean, "FooBar");
+		assertThat((Object) testBean.getName()).isNull();
 	}
 
 	@Test
-	public void invokeMethod() throws Exception {
+	void invokeMethod() throws Exception {
 		String rob = "Rob Harrop";
 
-		TestBean bean = new TestBean();
+		TestObject bean = new TestObject();
 		bean.setName(rob);
 
-		Method getName = TestBean.class.getMethod("getName", (Class[]) null);
-		Method setName = TestBean.class.getMethod("setName", new Class[] { String.class });
+		Method getName = TestObject.class.getMethod("getName");
+		Method setName = TestObject.class.getMethod("setName", String.class);
 
 		Object name = ReflectionUtils.invokeMethod(getName, bean);
-		assertEquals("Incorrect name returned", rob, name);
+		assertThat(name).as("Incorrect name returned").isEqualTo(rob);
 
 		String juergen = "Juergen Hoeller";
-		ReflectionUtils.invokeMethod(setName, bean, new Object[] { juergen });
-		assertEquals("Incorrect name set", juergen, bean.getName());
+		ReflectionUtils.invokeMethod(setName, bean, juergen);
+		assertThat(bean.getName()).as("Incorrect name set").isEqualTo(juergen);
 	}
 
 	@Test
-	public void declaresException() throws Exception {
-		Method remoteExMethod = A.class.getDeclaredMethod("foo", new Class[] { Integer.class });
-		assertTrue(ReflectionUtils.declaresException(remoteExMethod, RemoteException.class));
-		assertTrue(ReflectionUtils.declaresException(remoteExMethod, ConnectException.class));
-		assertFalse(ReflectionUtils.declaresException(remoteExMethod, NoSuchMethodException.class));
-		assertFalse(ReflectionUtils.declaresException(remoteExMethod, Exception.class));
+	void declaresException() throws Exception {
+		Method remoteExMethod = A.class.getDeclaredMethod("foo", Integer.class);
+		assertThat(ReflectionUtils.declaresException(remoteExMethod, RemoteException.class)).isTrue();
+		assertThat(ReflectionUtils.declaresException(remoteExMethod, ConnectException.class)).isTrue();
+		assertThat(ReflectionUtils.declaresException(remoteExMethod, NoSuchMethodException.class)).isFalse();
+		assertThat(ReflectionUtils.declaresException(remoteExMethod, Exception.class)).isFalse();
 
-		Method illegalExMethod = B.class.getDeclaredMethod("bar", new Class[] { String.class });
-		assertTrue(ReflectionUtils.declaresException(illegalExMethod, IllegalArgumentException.class));
-		assertTrue(ReflectionUtils.declaresException(illegalExMethod, NumberFormatException.class));
-		assertFalse(ReflectionUtils.declaresException(illegalExMethod, IllegalStateException.class));
-		assertFalse(ReflectionUtils.declaresException(illegalExMethod, Exception.class));
+		Method illegalExMethod = B.class.getDeclaredMethod("bar", String.class);
+		assertThat(ReflectionUtils.declaresException(illegalExMethod, IllegalArgumentException.class)).isTrue();
+		assertThat(ReflectionUtils.declaresException(illegalExMethod, NumberFormatException.class)).isTrue();
+		assertThat(ReflectionUtils.declaresException(illegalExMethod, IllegalStateException.class)).isFalse();
+		assertThat(ReflectionUtils.declaresException(illegalExMethod, Exception.class)).isFalse();
 	}
 
 	@Test
-	public void copySrcToDestinationOfIncorrectClass() {
-		TestBean src = new TestBean();
+	void copySrcToDestinationOfIncorrectClass() {
+		TestObject src = new TestObject();
 		String dest = new String();
-		try {
-			ReflectionUtils.shallowCopyFieldState(src, dest);
-			fail();
-		} catch (IllegalArgumentException ex) {
-			// Ok
-		}
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				ReflectionUtils.shallowCopyFieldState(src, dest));
 	}
 
 	@Test
-	public void rejectsNullSrc() {
-		TestBean src = null;
+	void rejectsNullSrc() {
+		TestObject src = null;
 		String dest = new String();
-		try {
-			ReflectionUtils.shallowCopyFieldState(src, dest);
-			fail();
-		} catch (IllegalArgumentException ex) {
-			// Ok
-		}
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				ReflectionUtils.shallowCopyFieldState(src, dest));
 	}
 
 	@Test
-	public void rejectsNullDest() {
-		TestBean src = new TestBean();
+	void rejectsNullDest() {
+		TestObject src = new TestObject();
 		String dest = null;
-		try {
-			ReflectionUtils.shallowCopyFieldState(src, dest);
-			fail();
-		} catch (IllegalArgumentException ex) {
-			// Ok
-		}
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				ReflectionUtils.shallowCopyFieldState(src, dest));
 	}
 
 	@Test
-	public void validCopy() {
-		TestBean src = new TestBean();
-		TestBean dest = new TestBean();
+	void validCopy() {
+		TestObject src = new TestObject();
+		TestObject dest = new TestObject();
 		testValidCopy(src, dest);
 	}
 
 	@Test
-	public void validCopyOnSubTypeWithNewField() {
-		TestBeanSubclassWithNewField src = new TestBeanSubclassWithNewField();
-		TestBeanSubclassWithNewField dest = new TestBeanSubclassWithNewField();
+	void validCopyOnSubTypeWithNewField() {
+		TestObjectSubclassWithNewField src = new TestObjectSubclassWithNewField();
+		TestObjectSubclassWithNewField dest = new TestObjectSubclassWithNewField();
 		src.magic = 11;
 
 		// Will check inherited fields are copied
 		testValidCopy(src, dest);
 
 		// Check subclass fields were copied
-		assertEquals(src.magic, dest.magic);
-		assertEquals(src.prot, dest.prot);
+		assertThat(dest.magic).isEqualTo(src.magic);
+		assertThat(dest.prot).isEqualTo(src.prot);
 	}
 
 	@Test
-	public void validCopyToSubType() {
-		TestBean src = new TestBean();
-		TestBeanSubclassWithNewField dest = new TestBeanSubclassWithNewField();
+	void validCopyToSubType() {
+		TestObject src = new TestObject();
+		TestObjectSubclassWithNewField dest = new TestObjectSubclassWithNewField();
 		dest.magic = 11;
 		testValidCopy(src, dest);
 		// Should have left this one alone
-		assertEquals(11, dest.magic);
+		assertThat(dest.magic).isEqualTo(11);
 	}
 
 	@Test
-	public void validCopyToSubTypeWithFinalField() {
-		TestBeanSubclassWithFinalField src = new TestBeanSubclassWithFinalField();
-		TestBeanSubclassWithFinalField dest = new TestBeanSubclassWithFinalField();
+	void validCopyToSubTypeWithFinalField() {
+		TestObjectSubclassWithFinalField src = new TestObjectSubclassWithFinalField();
+		TestObjectSubclassWithFinalField dest = new TestObjectSubclassWithFinalField();
 		// Check that this doesn't fail due to attempt to assign final
 		testValidCopy(src, dest);
 	}
 
-	private void testValidCopy(TestBean src, TestBean dest) {
+	private void testValidCopy(TestObject src, TestObject dest) {
 		src.setName("freddie");
 		src.setAge(15);
-		src.setSpouse(new TestBean());
-		assertFalse(src.getAge() == dest.getAge());
+		src.setSpouse(new TestObject());
+		assertThat(src.getAge() == dest.getAge()).isFalse();
 
 		ReflectionUtils.shallowCopyFieldState(src, dest);
-		assertEquals(src.getAge(), dest.getAge());
-		assertEquals(src.getSpouse(), dest.getSpouse());
-		assertEquals(src.getDoctor(), dest.getDoctor());
+		assertThat(dest.getAge()).isEqualTo(src.getAge());
+		assertThat(dest.getSpouse()).isEqualTo(src.getSpouse());
 	}
 
 	@Test
-	public void doWithProtectedMethods() {
+	void doWithProtectedMethods() {
 		ListSavingMethodCallback mc = new ListSavingMethodCallback();
-		ReflectionUtils.doWithMethods(TestBean.class, mc, new ReflectionUtils.MethodFilter() {
-			public boolean matches(Method m) {
-				return Modifier.isProtected(m.getModifiers());
-			}
-		});
-		assertFalse(mc.getMethodNames().isEmpty());
-		assertTrue("Must find protected method on Object", mc.getMethodNames().contains("clone"));
-		assertTrue("Must find protected method on Object", mc.getMethodNames().contains("finalize"));
-		assertFalse("Public, not protected", mc.getMethodNames().contains("hashCode"));
-		assertFalse("Public, not protected", mc.getMethodNames().contains("absquatulate"));
+		ReflectionUtils.doWithMethods(TestObject.class, mc, method -> Modifier.isProtected(method.getModifiers()));
+		assertThat(mc.getMethodNames().isEmpty()).isFalse();
+		assertThat(mc.getMethodNames().contains("clone")).as("Must find protected method on Object").isTrue();
+		assertThat(mc.getMethodNames().contains("finalize")).as("Must find protected method on Object").isTrue();
+		assertThat(mc.getMethodNames().contains("hashCode")).as("Public, not protected").isFalse();
+		assertThat(mc.getMethodNames().contains("absquatulate")).as("Public, not protected").isFalse();
 	}
 
 	@Test
-	public void duplicatesFound() {
+	void duplicatesFound() {
 		ListSavingMethodCallback mc = new ListSavingMethodCallback();
-		ReflectionUtils.doWithMethods(TestBeanSubclass.class, mc);
+		ReflectionUtils.doWithMethods(TestObjectSubclass.class, mc);
 		int absquatulateCount = 0;
 		for (String name : mc.getMethodNames()) {
 			if (name.equals("absquatulate")) {
 				++absquatulateCount;
 			}
 		}
-		assertEquals("Found 2 absquatulates", 2, absquatulateCount);
+		assertThat(absquatulateCount).as("Found 2 absquatulates").isEqualTo(2);
 	}
 
 	@Test
-	public void findMethod() throws Exception {
-		assertNotNull(ReflectionUtils.findMethod(B.class, "bar", String.class));
-		assertNotNull(ReflectionUtils.findMethod(B.class, "foo", Integer.class));
-		assertNotNull(ReflectionUtils.findMethod(B.class, "getClass"));
+	void findMethod() throws Exception {
+		assertThat(ReflectionUtils.findMethod(B.class, "bar", String.class)).isNotNull();
+		assertThat(ReflectionUtils.findMethod(B.class, "foo", Integer.class)).isNotNull();
+		assertThat(ReflectionUtils.findMethod(B.class, "getClass")).isNotNull();
 	}
 
-	@Ignore("[SPR-8644] findMethod() does not currently support var-args")
+	@Disabled("[SPR-8644] findMethod() does not currently support var-args")
 	@Test
-	public void findMethodWithVarArgs() throws Exception {
-		assertNotNull(ReflectionUtils.findMethod(B.class, "add", int.class, int.class, int.class));
+	void findMethodWithVarArgs() throws Exception {
+		assertThat(ReflectionUtils.findMethod(B.class, "add", int.class, int.class, int.class)).isNotNull();
 	}
 
 	@Test
-	public void isCglibRenamedMethod() throws SecurityException, NoSuchMethodException {
+	void isCglibRenamedMethod() throws SecurityException, NoSuchMethodException {
 		@SuppressWarnings("unused")
 		class C {
 			public void CGLIB$m1$123() {
@@ -277,18 +248,18 @@ public class ReflectionUtilsTests {
 			public void m1$1() {
 			}
 		}
-		assertTrue(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1$123")));
-		assertTrue(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1$0")));
-		assertFalse(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$$0")));
-		assertFalse(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1$")));
-		assertFalse(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1")));
-		assertFalse(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("m1")));
-		assertFalse(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("m1$")));
-		assertFalse(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("m1$1")));
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1$123"))).isTrue();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1$0"))).isTrue();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$$0"))).isFalse();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1$"))).isFalse();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("CGLIB$m1"))).isFalse();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("m1"))).isFalse();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("m1$"))).isFalse();
+		assertThat(ReflectionUtils.isCglibRenamedMethod(C.class.getMethod("m1$1"))).isFalse();
 	}
 
 	@Test
-	public void getAllDeclaredMethods() throws Exception {
+	void getAllDeclaredMethods() throws Exception {
 		class Foo {
 			@Override
 			public String toString() {
@@ -301,11 +272,11 @@ public class ReflectionUtilsTests {
 				toStringMethodCount++;
 			}
 		}
-		assertThat(toStringMethodCount, is(2));
+		assertThat(toStringMethodCount).isEqualTo(2);
 	}
 
 	@Test
-	public void getUniqueDeclaredMethods() throws Exception {
+	void getUniqueDeclaredMethods() throws Exception {
 		class Foo {
 			@Override
 			public String toString() {
@@ -318,21 +289,21 @@ public class ReflectionUtilsTests {
 				toStringMethodCount++;
 			}
 		}
-		assertThat(toStringMethodCount, is(1));
+		assertThat(toStringMethodCount).isEqualTo(1);
 	}
 
 	@Test
-	public void getUniqueDeclaredMethods_withCovariantReturnType() throws Exception {
+	void getUniqueDeclaredMethods_withCovariantReturnType() throws Exception {
 		class Parent {
 			@SuppressWarnings("unused")
 			public Number m1() {
-				return new Integer(42);
+				return Integer.valueOf(42);
 			}
 		}
 		class Leaf extends Parent {
 			@Override
 			public Integer m1() {
-				return new Integer(42);
+				return Integer.valueOf(42);
 			}
 		}
 		int m1MethodCount = 0;
@@ -342,17 +313,25 @@ public class ReflectionUtilsTests {
 				m1MethodCount++;
 			}
 		}
-		assertThat(m1MethodCount, is(1));
-		assertTrue(ObjectUtils.containsElement(methods, Leaf.class.getMethod("m1")));
-		assertFalse(ObjectUtils.containsElement(methods, Parent.class.getMethod("m1")));
+		assertThat(m1MethodCount).isEqualTo(1);
+		assertThat(ObjectUtils.containsElement(methods, Leaf.class.getMethod("m1"))).isTrue();
+		assertThat(ObjectUtils.containsElement(methods, Parent.class.getMethod("m1"))).isFalse();
+	}
+
+	@Test
+	void getDeclaredMethodsReturnsCopy() {
+		Method[] m1 = ReflectionUtils.getDeclaredMethods(A.class);
+		Method[] m2 = ReflectionUtils.getDeclaredMethods(A.class);
+		assertThat(m1). isNotSameAs(m2);
 	}
 
 	private static class ListSavingMethodCallback implements ReflectionUtils.MethodCallback {
 
-		private List<String> methodNames = new LinkedList<String>();
+		private List<String> methodNames = new ArrayList<>();
 
-		private List<Method> methods = new LinkedList<Method>();
+		private List<Method> methods = new ArrayList<>();
 
+		@Override
 		public void doWith(Method m) throws IllegalArgumentException, IllegalAccessException {
 			this.methodNames.add(m.getName());
 			this.methods.add(m);
@@ -368,7 +347,7 @@ public class ReflectionUtilsTests {
 		}
 	}
 
-	private static class TestBeanSubclass extends TestBean {
+	private static class TestObjectSubclass extends TestObject {
 
 		@Override
 		public void absquatulate() {
@@ -376,20 +355,20 @@ public class ReflectionUtilsTests {
 		}
 	}
 
-	private static class TestBeanSubclassWithPublicField extends TestBean {
+	private static class TestObjectSubclassWithPublicField extends TestObject {
 
 		@SuppressWarnings("unused")
 		public String publicField = "foo";
 	}
 
-	private static class TestBeanSubclassWithNewField extends TestBean {
+	private static class TestObjectSubclassWithNewField extends TestObject {
 
 		private int magic;
 
 		protected String prot = "foo";
 	}
 
-	private static class TestBeanSubclassWithFinalField extends TestBean {
+	private static class TestObjectSubclassWithFinalField extends TestObject {
 
 		@SuppressWarnings("unused")
 		private final String foo = "will break naive copy that doesn't exclude statics";
