@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,9 +16,12 @@
 
 package org.springframework.expression.spel.standard;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Deque;
 import java.util.List;
-import java.util.Stack;
+import java.util.regex.Pattern;
 
 import org.springframework.expression.ParseException;
 import org.springframework.expression.ParserContext;
@@ -37,14 +40,17 @@ import org.springframework.expression.spel.ast.FunctionReference;
 import org.springframework.expression.spel.ast.Identifier;
 import org.springframework.expression.spel.ast.Indexer;
 import org.springframework.expression.spel.ast.InlineList;
+import org.springframework.expression.spel.ast.InlineMap;
 import org.springframework.expression.spel.ast.Literal;
 import org.springframework.expression.spel.ast.MethodReference;
 import org.springframework.expression.spel.ast.NullLiteral;
 import org.springframework.expression.spel.ast.OpAnd;
+import org.springframework.expression.spel.ast.OpDec;
 import org.springframework.expression.spel.ast.OpDivide;
 import org.springframework.expression.spel.ast.OpEQ;
 import org.springframework.expression.spel.ast.OpGE;
 import org.springframework.expression.spel.ast.OpGT;
+import org.springframework.expression.spel.ast.OpInc;
 import org.springframework.expression.spel.ast.OpLE;
 import org.springframework.expression.spel.ast.OpLT;
 import org.springframework.expression.spel.ast.OpMinus;
@@ -53,6 +59,7 @@ import org.springframework.expression.spel.ast.OpMultiply;
 import org.springframework.expression.spel.ast.OpNE;
 import org.springframework.expression.spel.ast.OpOr;
 import org.springframework.expression.spel.ast.OpPlus;
+import org.springframework.expression.spel.ast.OperatorBetween;
 import org.springframework.expression.spel.ast.OperatorInstanceof;
 import org.springframework.expression.spel.ast.OperatorMatches;
 import org.springframework.expression.spel.ast.OperatorNot;
@@ -66,32 +73,39 @@ import org.springframework.expression.spel.ast.StringLiteral;
 import org.springframework.expression.spel.ast.Ternary;
 import org.springframework.expression.spel.ast.TypeReference;
 import org.springframework.expression.spel.ast.VariableReference;
+import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
+import org.springframework.util.StringUtils;
 
 /**
- * Hand written SpEL parser. Instances are reusable but are not thread safe.
+ * Hand-written SpEL parser. Instances are reusable but are not thread-safe.
  *
  * @author Andy Clement
+ * @author Juergen Hoeller
+ * @author Phillip Webb
  * @since 3.0
  */
 class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 
+	private static final Pattern VALID_QUALIFIED_ID_PATTERN = Pattern.compile("[\\p{L}\\p{N}_$]+");
+
+
+	private final SpelParserConfiguration configuration;
+
+	// For rules that build nodes, they are stacked here for return
+	private final Deque<SpelNodeImpl> constructedNodes = new ArrayDeque<>();
+
 	// The expression being parsed
-	private String expressionString;
+	private String expressionString = "";
 
 	// The token stream constructed from that expression string
-	private List<Token> tokenStream;
+	private List<Token> tokenStream = Collections.emptyList();
 
 	// length of a populated token stream
 	private int tokenStreamLength;
 
 	// Current location in the token stream when processing tokens
 	private int tokenStreamPointer;
-
-	// For rules that build nodes, they are stacked here for return
-	private Stack<SpelNodeImpl> constructedNodes = new Stack<SpelNodeImpl>();
-
-	private SpelParserConfiguration configuration;
 
 
 	/**
@@ -104,24 +118,27 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 
 
 	@Override
-	protected SpelExpression doParseExpression(String expressionString, ParserContext context) throws ParseException {
+	protected SpelExpression doParseExpression(String expressionString, @Nullable ParserContext context)
+			throws ParseException {
+
 		try {
 			this.expressionString = expressionString;
 			Tokenizer tokenizer = new Tokenizer(expressionString);
-			tokenizer.process();
-			tokenStream = tokenizer.getTokens();
-			tokenStreamLength = tokenStream.size();
-			tokenStreamPointer = 0;
-			constructedNodes.clear();
+			this.tokenStream = tokenizer.process();
+			this.tokenStreamLength = this.tokenStream.size();
+			this.tokenStreamPointer = 0;
+			this.constructedNodes.clear();
 			SpelNodeImpl ast = eatExpression();
-			if (moreTokens()) {
-				throw new SpelParseException(peekToken().startpos,SpelMessage.MORE_INPUT,toString(nextToken()));
+			Assert.state(ast != null, "No node");
+			Token t = peekToken();
+			if (t != null) {
+				throw new SpelParseException(t.startPos, SpelMessage.MORE_INPUT, toString(nextToken()));
 			}
-			Assert.isTrue(constructedNodes.isEmpty());
-			return new SpelExpression(expressionString, ast, configuration);
+			Assert.isTrue(this.constructedNodes.isEmpty(), "At least one node expected");
+			return new SpelExpression(expressionString, ast, this.configuration);
 		}
-		catch (InternalParseException ipe) {
-			throw ipe.getCause();
+		catch (InternalParseException ex) {
+			throw ex.getCause();
 		}
 	}
 
@@ -131,202 +148,232 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	//	    | (DEFAULT^ logicalOrExpression)
 	//	    | (QMARK^ expression COLON! expression)
 	//      | (ELVIS^ expression))?;
+	@Nullable
 	private SpelNodeImpl eatExpression() {
 		SpelNodeImpl expr = eatLogicalOrExpression();
-		if (moreTokens()) {
-			Token t = peekToken();
-			if (t.kind==TokenKind.ASSIGN) { // a=b
-				if (expr==null) {
-				expr = new NullLiteral(toPos(t.startpos-1,t.endpos-1));
-			}
+		Token t = peekToken();
+		if (t != null) {
+			if (t.kind == TokenKind.ASSIGN) {  // a=b
+				if (expr == null) {
+					expr = new NullLiteral(t.startPos - 1, t.endPos - 1);
+				}
 				nextToken();
 				SpelNodeImpl assignedValue = eatLogicalOrExpression();
-				return new Assign(toPos(t),expr,assignedValue);
-			} else if (t.kind==TokenKind.ELVIS) { // a?:b (a if it isn't null, otherwise b)
-				if (expr==null) {
-					expr = new NullLiteral(toPos(t.startpos-1,t.endpos-2));
+				return new Assign(t.startPos, t.endPos, expr, assignedValue);
+			}
+			if (t.kind == TokenKind.ELVIS) {  // a?:b (a if it isn't null, otherwise b)
+				if (expr == null) {
+					expr = new NullLiteral(t.startPos - 1, t.endPos - 2);
 				}
-				nextToken(); // elvis has left the building
+				nextToken();  // elvis has left the building
 				SpelNodeImpl valueIfNull = eatExpression();
-				if (valueIfNull==null) {
-					valueIfNull = new NullLiteral(toPos(t.startpos+1,t.endpos+1));
+				if (valueIfNull == null) {
+					valueIfNull = new NullLiteral(t.startPos + 1, t.endPos + 1);
 				}
-				return new Elvis(toPos(t),expr,valueIfNull);
-			} else if (t.kind==TokenKind.QMARK) { // a?b:c
-				if (expr==null) {
-					expr = new NullLiteral(toPos(t.startpos-1,t.endpos-1));
+				return new Elvis(t.startPos, t.endPos, expr, valueIfNull);
+			}
+			if (t.kind == TokenKind.QMARK) {  // a?b:c
+				if (expr == null) {
+					expr = new NullLiteral(t.startPos - 1, t.endPos - 1);
 				}
 				nextToken();
 				SpelNodeImpl ifTrueExprValue = eatExpression();
 				eatToken(TokenKind.COLON);
 				SpelNodeImpl ifFalseExprValue = eatExpression();
-				return new Ternary(toPos(t),expr,ifTrueExprValue,ifFalseExprValue);
+				return new Ternary(t.startPos, t.endPos, expr, ifTrueExprValue, ifFalseExprValue);
 			}
 		}
 		return expr;
 	}
 
 	//logicalOrExpression : logicalAndExpression (OR^ logicalAndExpression)*;
+	@Nullable
 	private SpelNodeImpl eatLogicalOrExpression() {
 		SpelNodeImpl expr = eatLogicalAndExpression();
-		while (peekIdentifierToken("or")) {
-			Token t = nextToken(); //consume OR
+		while (peekIdentifierToken("or") || peekToken(TokenKind.SYMBOLIC_OR)) {
+			Token t = takeToken();  //consume OR
 			SpelNodeImpl rhExpr = eatLogicalAndExpression();
-			checkRightOperand(t,rhExpr);
-			expr = new OpOr(toPos(t),expr,rhExpr);
+			checkOperands(t, expr, rhExpr);
+			expr = new OpOr(t.startPos, t.endPos, expr, rhExpr);
 		}
 		return expr;
 	}
 
 	// logicalAndExpression : relationalExpression (AND^ relationalExpression)*;
+	@Nullable
 	private SpelNodeImpl eatLogicalAndExpression() {
 		SpelNodeImpl expr = eatRelationalExpression();
-		while (peekIdentifierToken("and")) {
-			Token t = nextToken();// consume 'AND'
+		while (peekIdentifierToken("and") || peekToken(TokenKind.SYMBOLIC_AND)) {
+			Token t = takeToken();  // consume 'AND'
 			SpelNodeImpl rhExpr = eatRelationalExpression();
-			checkRightOperand(t,rhExpr);
-			expr = new OpAnd(toPos(t),expr,rhExpr);
+			checkOperands(t, expr, rhExpr);
+			expr = new OpAnd(t.startPos, t.endPos, expr, rhExpr);
 		}
 		return expr;
 	}
 
 	// relationalExpression : sumExpression (relationalOperator^ sumExpression)?;
+	@Nullable
 	private SpelNodeImpl eatRelationalExpression() {
 		SpelNodeImpl expr = eatSumExpression();
 		Token relationalOperatorToken = maybeEatRelationalOperator();
 		if (relationalOperatorToken != null) {
-			Token t = nextToken(); //consume relational operator token
+			Token t = takeToken();  // consume relational operator token
 			SpelNodeImpl rhExpr = eatSumExpression();
-			checkRightOperand(t,rhExpr);
+			checkOperands(t, expr, rhExpr);
 			TokenKind tk = relationalOperatorToken.kind;
+
 			if (relationalOperatorToken.isNumericRelationalOperator()) {
-				int pos = toPos(t);
-				if (tk==TokenKind.GT) {
-					return new OpGT(pos,expr,rhExpr);
-				} else if (tk==TokenKind.LT) {
-					return new OpLT(pos,expr,rhExpr);
-				} else if (tk==TokenKind.LE) {
-					return new OpLE(pos,expr,rhExpr);
-				} else if (tk==TokenKind.GE) {
-					return new OpGE(pos,expr,rhExpr);
-				} else if (tk == TokenKind.EQ) {
-					return new OpEQ(pos,expr,rhExpr);
-				} else {
-					Assert.isTrue(tk == TokenKind.NE);
-					return new OpNE(pos,expr,rhExpr);
+				if (tk == TokenKind.GT) {
+					return new OpGT(t.startPos, t.endPos, expr, rhExpr);
 				}
+				if (tk == TokenKind.LT) {
+					return new OpLT(t.startPos, t.endPos, expr, rhExpr);
+				}
+				if (tk == TokenKind.LE) {
+					return new OpLE(t.startPos, t.endPos, expr, rhExpr);
+				}
+				if (tk == TokenKind.GE) {
+					return new OpGE(t.startPos, t.endPos, expr, rhExpr);
+				}
+				if (tk == TokenKind.EQ) {
+					return new OpEQ(t.startPos, t.endPos, expr, rhExpr);
+				}
+				Assert.isTrue(tk == TokenKind.NE, "Not-equals token expected");
+				return new OpNE(t.startPos, t.endPos, expr, rhExpr);
 			}
-			if (tk==TokenKind.INSTANCEOF) {
-				return new OperatorInstanceof(toPos(t),expr,rhExpr);
-			} else if (tk==TokenKind.MATCHES) {
-				return new OperatorMatches(toPos(t),expr,rhExpr);
-			} else {
-				Assert.isTrue(tk==TokenKind.BETWEEN);
-				return new org.springframework.expression.spel.ast.OperatorBetween(toPos(t),expr,rhExpr);
+
+			if (tk == TokenKind.INSTANCEOF) {
+				return new OperatorInstanceof(t.startPos, t.endPos, expr, rhExpr);
 			}
+
+			if (tk == TokenKind.MATCHES) {
+				return new OperatorMatches(t.startPos, t.endPos, expr, rhExpr);
+			}
+
+			Assert.isTrue(tk == TokenKind.BETWEEN, "Between token expected");
+			return new OperatorBetween(t.startPos, t.endPos, expr, rhExpr);
 		}
 		return expr;
 	}
 
 	//sumExpression: productExpression ( (PLUS^ | MINUS^) productExpression)*;
+	@Nullable
 	private SpelNodeImpl eatSumExpression() {
 		SpelNodeImpl expr = eatProductExpression();
-		while (peekToken(TokenKind.PLUS,TokenKind.MINUS)) {
-			Token t = nextToken();//consume PLUS or MINUS
+		while (peekToken(TokenKind.PLUS, TokenKind.MINUS, TokenKind.INC)) {
+			Token t = takeToken();  //consume PLUS or MINUS or INC
 			SpelNodeImpl rhExpr = eatProductExpression();
-			checkRightOperand(t,rhExpr);
-			if (t.kind==TokenKind.PLUS) {
-				expr = new OpPlus(toPos(t),expr,rhExpr);
-			} else {
-				Assert.isTrue(t.kind==TokenKind.MINUS);
-				expr = new OpMinus(toPos(t),expr,rhExpr);
+			checkRightOperand(t, rhExpr);
+			if (t.kind == TokenKind.PLUS) {
+				expr = new OpPlus(t.startPos, t.endPos, expr, rhExpr);
+			}
+			else if (t.kind == TokenKind.MINUS) {
+				expr = new OpMinus(t.startPos, t.endPos, expr, rhExpr);
 			}
 		}
 		return expr;
 	}
 
 	// productExpression: powerExpr ((STAR^ | DIV^| MOD^) powerExpr)* ;
+	@Nullable
 	private SpelNodeImpl eatProductExpression() {
-		SpelNodeImpl expr = eatPowerExpression();
-		while (peekToken(TokenKind.STAR,TokenKind.DIV,TokenKind.MOD)) {
-			Token t = nextToken(); // consume STAR/DIV/MOD
-			SpelNodeImpl rhExpr = eatPowerExpression();
-			checkRightOperand(t,rhExpr);
-			if (t.kind==TokenKind.STAR) {
-				expr = new OpMultiply(toPos(t),expr,rhExpr);
-			} else if (t.kind==TokenKind.DIV) {
-				expr = new OpDivide(toPos(t),expr,rhExpr);
-			} else {
-				Assert.isTrue(t.kind==TokenKind.MOD);
-				expr = new OpModulus(toPos(t),expr,rhExpr);
+		SpelNodeImpl expr = eatPowerIncDecExpression();
+		while (peekToken(TokenKind.STAR, TokenKind.DIV, TokenKind.MOD)) {
+			Token t = takeToken();  // consume STAR/DIV/MOD
+			SpelNodeImpl rhExpr = eatPowerIncDecExpression();
+			checkOperands(t, expr, rhExpr);
+			if (t.kind == TokenKind.STAR) {
+				expr = new OpMultiply(t.startPos, t.endPos, expr, rhExpr);
+			}
+			else if (t.kind == TokenKind.DIV) {
+				expr = new OpDivide(t.startPos, t.endPos, expr, rhExpr);
+			}
+			else {
+				Assert.isTrue(t.kind == TokenKind.MOD, "Mod token expected");
+				expr = new OpModulus(t.startPos, t.endPos, expr, rhExpr);
 			}
 		}
 		return expr;
 	}
 
-	// powerExpr  : unaryExpression (POWER^ unaryExpression)? ;
-	private SpelNodeImpl eatPowerExpression() {
+	// powerExpr  : unaryExpression (POWER^ unaryExpression)? (INC || DEC) ;
+	@Nullable
+	private SpelNodeImpl eatPowerIncDecExpression() {
 		SpelNodeImpl expr = eatUnaryExpression();
 		if (peekToken(TokenKind.POWER)) {
-			Token t = nextToken();//consume POWER
+			Token t = takeToken();  //consume POWER
 			SpelNodeImpl rhExpr = eatUnaryExpression();
-			checkRightOperand(t,rhExpr);
-			return new OperatorPower(toPos(t),expr, rhExpr);
+			checkRightOperand(t, rhExpr);
+			return new OperatorPower(t.startPos, t.endPos, expr, rhExpr);
+		}
+		if (expr != null && peekToken(TokenKind.INC, TokenKind.DEC)) {
+			Token t = takeToken();  //consume INC/DEC
+			if (t.getKind() == TokenKind.INC) {
+				return new OpInc(t.startPos, t.endPos, true, expr);
+			}
+			return new OpDec(t.startPos, t.endPos, true, expr);
 		}
 		return expr;
 	}
 
-	// unaryExpression: (PLUS^ | MINUS^ | BANG^) unaryExpression | primaryExpression ;
+	// unaryExpression: (PLUS^ | MINUS^ | BANG^ | INC^ | DEC^) unaryExpression | primaryExpression ;
+	@Nullable
 	private SpelNodeImpl eatUnaryExpression() {
-		if (peekToken(TokenKind.PLUS,TokenKind.MINUS,TokenKind.NOT)) {
-			Token t = nextToken();
+		if (peekToken(TokenKind.PLUS, TokenKind.MINUS, TokenKind.NOT)) {
+			Token t = takeToken();
 			SpelNodeImpl expr = eatUnaryExpression();
-			if (t.kind==TokenKind.NOT) {
-				return new OperatorNot(toPos(t),expr);
-			} else if (t.kind==TokenKind.PLUS) {
-				return new OpPlus(toPos(t),expr);
-			} else {
-				Assert.isTrue(t.kind==TokenKind.MINUS);
-				return new OpMinus(toPos(t),expr);
+			Assert.state(expr != null, "No node");
+			if (t.kind == TokenKind.NOT) {
+				return new OperatorNot(t.startPos, t.endPos, expr);
 			}
-		} else {
-			return eatPrimaryExpression();
+			if (t.kind == TokenKind.PLUS) {
+				return new OpPlus(t.startPos, t.endPos, expr);
+			}
+			Assert.isTrue(t.kind == TokenKind.MINUS, "Minus token expected");
+			return new OpMinus(t.startPos, t.endPos, expr);
 		}
+		if (peekToken(TokenKind.INC, TokenKind.DEC)) {
+			Token t = takeToken();
+			SpelNodeImpl expr = eatUnaryExpression();
+			if (t.getKind() == TokenKind.INC) {
+				return new OpInc(t.startPos, t.endPos, false, expr);
+			}
+			return new OpDec(t.startPos, t.endPos, false, expr);
+		}
+		return eatPrimaryExpression();
 	}
 
 	// primaryExpression : startNode (node)? -> ^(EXPRESSION startNode (node)?);
+	@Nullable
 	private SpelNodeImpl eatPrimaryExpression() {
-		List<SpelNodeImpl> nodes = new ArrayList<SpelNodeImpl>();
-		SpelNodeImpl start = eatStartNode(); // always a start node
-		nodes.add(start);
-		while (maybeEatNode()) {
-			nodes.add(pop());
+		SpelNodeImpl start = eatStartNode();  // always a start node
+		List<SpelNodeImpl> nodes = null;
+		SpelNodeImpl node = eatNode();
+		while (node != null) {
+			if (nodes == null) {
+				nodes = new ArrayList<>(4);
+				nodes.add(start);
+			}
+			nodes.add(node);
+			node = eatNode();
 		}
-		if (nodes.size()==1) {
-			return nodes.get(0);
-		} else {
-			return new CompoundExpression(toPos(start.getStartPosition(),nodes.get(nodes.size()-1).getEndPosition()),nodes.toArray(new SpelNodeImpl[nodes.size()]));
+		if (start == null || nodes == null) {
+			return start;
 		}
+		return new CompoundExpression(start.getStartPosition(), nodes.get(nodes.size() - 1).getEndPosition(),
+				nodes.toArray(new SpelNodeImpl[0]));
 	}
 
 	// node : ((DOT dottedNode) | (SAFE_NAVI dottedNode) | nonDottedNode)+;
-	private boolean maybeEatNode() {
-		SpelNodeImpl expr = null;
-		if (peekToken(TokenKind.DOT,TokenKind.SAFE_NAVI)) {
-			expr = eatDottedNode();
-		} else {
-			expr = maybeEatNonDottedNode();
-		}
-		if (expr==null) {
-			return false;
-		} else {
-			push(expr);
-			return true;
-		}
+	@Nullable
+	private SpelNodeImpl eatNode() {
+		return (peekToken(TokenKind.DOT, TokenKind.SAFE_NAVI) ? eatDottedNode() : eatNonDottedNode());
 	}
 
 	// nonDottedNode: indexer;
-	private SpelNodeImpl maybeEatNonDottedNode() {
+	@Nullable
+	private SpelNodeImpl eatNonDottedNode() {
 		if (peekToken(TokenKind.LSQUARE)) {
 			if (maybeEatIndexer()) {
 				return pop();
@@ -345,18 +392,19 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	//    ))
 	//	;
 	private SpelNodeImpl eatDottedNode() {
-		Token t = nextToken();// it was a '.' or a '?.'
-		boolean nullSafeNavigation = t.kind==TokenKind.SAFE_NAVI;
-		if (maybeEatMethodOrProperty(nullSafeNavigation) || maybeEatFunctionOrVar() || maybeEatProjection(nullSafeNavigation) || maybeEatSelection(nullSafeNavigation)) {
+		Token t = takeToken();  // it was a '.' or a '?.'
+		boolean nullSafeNavigation = (t.kind == TokenKind.SAFE_NAVI);
+		if (maybeEatMethodOrProperty(nullSafeNavigation) || maybeEatFunctionOrVar() ||
+				maybeEatProjection(nullSafeNavigation) || maybeEatSelection(nullSafeNavigation)) {
 			return pop();
 		}
-		if (peekToken()==null) {
+		if (peekToken() == null) {
 			// unexpectedly ran out of data
-			raiseInternalException(t.startpos,SpelMessage.OOD);
-		} else {
-			raiseInternalException(t.startpos,SpelMessage.UNEXPECTED_DATA_AFTER_DOT,toString(peekToken()));
+			throw internalException(t.startPos, SpelMessage.OOD);
 		}
-		return null;
+		else {
+			throw internalException(t.startPos, SpelMessage.UNEXPECTED_DATA_AFTER_DOT, toString(peekToken()));
+		}
 	}
 
 	// functionOrVar
@@ -369,69 +417,75 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 		if (!peekToken(TokenKind.HASH)) {
 			return false;
 		}
-		Token t = nextToken();
+		Token t = takeToken();
 		Token functionOrVariableName = eatToken(TokenKind.IDENTIFIER);
 		SpelNodeImpl[] args = maybeEatMethodArgs();
-		if (args==null) {
-			push(new VariableReference(functionOrVariableName.data,toPos(t.startpos,functionOrVariableName.endpos)));
-			return true;
-		} else {
-			push(new FunctionReference(functionOrVariableName.data,toPos(t.startpos,functionOrVariableName.endpos),args));
+		if (args == null) {
+			push(new VariableReference(functionOrVariableName.stringValue(),
+					t.startPos, functionOrVariableName.endPos));
 			return true;
 		}
+
+		push(new FunctionReference(functionOrVariableName.stringValue(),
+				t.startPos, functionOrVariableName.endPos, args));
+		return true;
 	}
 
 	// methodArgs : LPAREN! (argument (COMMA! argument)* (COMMA!)?)? RPAREN!;
+	@Nullable
 	private SpelNodeImpl[] maybeEatMethodArgs() {
 		if (!peekToken(TokenKind.LPAREN)) {
 			return null;
 		}
-		List<SpelNodeImpl> args = new ArrayList<SpelNodeImpl>();
+		List<SpelNodeImpl> args = new ArrayList<>();
 		consumeArguments(args);
 		eatToken(TokenKind.RPAREN);
-		return args.toArray(new SpelNodeImpl[args.size()]);
+		return args.toArray(new SpelNodeImpl[0]);
 	}
 
 	private void eatConstructorArgs(List<SpelNodeImpl> accumulatedArguments) {
 		if (!peekToken(TokenKind.LPAREN)) {
-			throw new InternalParseException(new SpelParseException(expressionString,positionOf(peekToken()),SpelMessage.MISSING_CONSTRUCTOR_ARGS));
+			throw new InternalParseException(new SpelParseException(this.expressionString,
+					positionOf(peekToken()), SpelMessage.MISSING_CONSTRUCTOR_ARGS));
 		}
 		consumeArguments(accumulatedArguments);
 		eatToken(TokenKind.RPAREN);
 	}
 
 	/**
-	 * Used for consuming arguments for either a method or a constructor call
+	 * Used for consuming arguments for either a method or a constructor call.
 	 */
 	private void consumeArguments(List<SpelNodeImpl> accumulatedArguments) {
-		int pos = peekToken().startpos;
-		Token next = null;
+		Token t = peekToken();
+		Assert.state(t != null, "Expected token");
+		int pos = t.startPos;
+		Token next;
 		do {
-			nextToken();// consume ( (first time through) or comma (subsequent times)
-			Token t = peekToken();
-			if (t==null) {
-				raiseInternalException(pos,SpelMessage.RUN_OUT_OF_ARGUMENTS);
+			nextToken();  // consume (first time through) or comma (subsequent times)
+			t = peekToken();
+			if (t == null) {
+				throw internalException(pos, SpelMessage.RUN_OUT_OF_ARGUMENTS);
 			}
-			if (t.kind!=TokenKind.RPAREN) {
+			if (t.kind != TokenKind.RPAREN) {
 				accumulatedArguments.add(eatExpression());
 			}
 			next = peekToken();
-		} while (next!=null && next.kind==TokenKind.COMMA);
-		if (next==null) {
-			raiseInternalException(pos,SpelMessage.RUN_OUT_OF_ARGUMENTS);
+		}
+		while (next != null && next.kind == TokenKind.COMMA);
+
+		if (next == null) {
+			throw internalException(pos, SpelMessage.RUN_OUT_OF_ARGUMENTS);
 		}
 	}
 
-	private int positionOf(Token t) {
-		if (t==null) {
+	private int positionOf(@Nullable Token t) {
+		if (t == null) {
 			// if null assume the problem is because the right token was
 			// not found at the end of the expression
-			return expressionString.length();
-		} else {
-			return t.startpos;
+			return this.expressionString.length();
 		}
+		return t.startPos;
 	}
-
 
 	//startNode
 	// : parenExpr | literal
@@ -444,20 +498,28 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	//	    | lastSelection
 	//	    | indexer
 	//	    | constructor
+	@Nullable
 	private SpelNodeImpl eatStartNode() {
 		if (maybeEatLiteral()) {
 			return pop();
-		} else if (maybeEatParenExpression()) {
+		}
+		else if (maybeEatParenExpression()) {
 			return pop();
-		} else if (maybeEatTypeReference() || maybeEatNullReference() || maybeEatConstructorReference() || maybeEatMethodOrProperty(false) || maybeEatFunctionOrVar()) {
+		}
+		else if (maybeEatTypeReference() || maybeEatNullReference() || maybeEatConstructorReference() ||
+				maybeEatMethodOrProperty(false) || maybeEatFunctionOrVar()) {
 			return pop();
-		} else if (maybeEatBeanReference()) {
+		}
+		else if (maybeEatBeanReference()) {
 			return pop();
-		} else if (maybeEatProjection(false) || maybeEatSelection(false) || maybeEatIndexer()) {
+		}
+		else if (maybeEatProjection(false) || maybeEatSelection(false) || maybeEatIndexer()) {
 			return pop();
-		} else if (maybeEatInlineList()) {
+		}
+		else if (maybeEatInlineListOrMap()) {
 			return pop();
-		} else {
+		}
+		else {
 			return null;
 		}
 	}
@@ -465,23 +527,31 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	// parse: @beanname @'bean.name'
 	// quoted if dotted
 	private boolean maybeEatBeanReference() {
-		if (peekToken(TokenKind.BEAN_REF)) {
-			Token beanRefToken = nextToken();
+		if (peekToken(TokenKind.BEAN_REF) || peekToken(TokenKind.FACTORY_BEAN_REF)) {
+			Token beanRefToken = takeToken();
 			Token beanNameToken = null;
-			String beanname = null;
+			String beanName = null;
 			if (peekToken(TokenKind.IDENTIFIER)) {
 				beanNameToken = eatToken(TokenKind.IDENTIFIER);
-				beanname = beanNameToken.data;
-			} else if (peekToken(TokenKind.LITERAL_STRING)) {
-				beanNameToken = eatToken(TokenKind.LITERAL_STRING);
-				beanname = beanNameToken.stringValue();
-				beanname = beanname.substring(1, beanname.length() - 1);
-			} else {
-				raiseInternalException(beanRefToken.startpos,SpelMessage.INVALID_BEAN_REFERENCE);
+				beanName = beanNameToken.stringValue();
 			}
-
-			BeanReference beanReference = new BeanReference(toPos(beanNameToken),beanname);
-			constructedNodes.push(beanReference);
+			else if (peekToken(TokenKind.LITERAL_STRING)) {
+				beanNameToken = eatToken(TokenKind.LITERAL_STRING);
+				beanName = beanNameToken.stringValue();
+				beanName = beanName.substring(1, beanName.length() - 1);
+			}
+			else {
+				throw internalException(beanRefToken.startPos, SpelMessage.INVALID_BEAN_REFERENCE);
+			}
+			BeanReference beanReference;
+			if (beanRefToken.getKind() == TokenKind.FACTORY_BEAN_REF) {
+				String beanNameString = String.valueOf(TokenKind.FACTORY_BEAN_REF.tokenChars) + beanName;
+				beanReference = new BeanReference(beanRefToken.startPos, beanNameToken.endPos, beanNameString);
+			}
+			else {
+				beanReference = new BeanReference(beanNameToken.startPos, beanNameToken.endPos, beanName);
+			}
+			this.constructedNodes.push(beanReference);
 			return true;
 		}
 		return false;
@@ -490,21 +560,28 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	private boolean maybeEatTypeReference() {
 		if (peekToken(TokenKind.IDENTIFIER)) {
 			Token typeName = peekToken();
-			if (!typeName.stringValue().equals("T")) {
+			Assert.state(typeName != null, "Expected token");
+			if (!"T".equals(typeName.stringValue())) {
 				return false;
 			}
-			nextToken();
+			// It looks like a type reference but is T being used as a map key?
+			Token t = takeToken();
+			if (peekToken(TokenKind.RSQUARE)) {
+				// looks like 'T]' (T is map key)
+				push(new PropertyOrFieldReference(false, t.stringValue(), t.startPos, t.endPos));
+				return true;
+			}
 			eatToken(TokenKind.LPAREN);
 			SpelNodeImpl node = eatPossiblyQualifiedId();
 			// dotted qualified id
 			// Are there array dimensions?
 			int dims = 0;
-			while (peekToken(TokenKind.LSQUARE,true)) {
+			while (peekToken(TokenKind.LSQUARE, true)) {
 				eatToken(TokenKind.RSQUARE);
 				dims++;
 			}
 			eatToken(TokenKind.RPAREN);
-			constructedNodes.push(new TypeReference(toPos(typeName),node,dims));
+			this.constructedNodes.push(new TypeReference(typeName.startPos, typeName.endPos, node, dims));
 			return true;
 		}
 		return false;
@@ -513,11 +590,12 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	private boolean maybeEatNullReference() {
 		if (peekToken(TokenKind.IDENTIFIER)) {
 			Token nullToken = peekToken();
-			if (!nullToken.stringValue().toLowerCase().equals("null")) {
+			Assert.state(nullToken != null, "Expected token");
+			if (!"null".equalsIgnoreCase(nullToken.stringValue())) {
 				return false;
 			}
 			nextToken();
-			constructedNodes.push(new NullLiteral(toPos(nullToken)));
+			this.constructedNodes.push(new NullLiteral(nullToken.startPos, nullToken.endPos));
 			return true;
 		}
 		return false;
@@ -526,46 +604,90 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	//projection: PROJECT^ expression RCURLY!;
 	private boolean maybeEatProjection(boolean nullSafeNavigation) {
 		Token t = peekToken();
-		if (!peekToken(TokenKind.PROJECT,true)) {
+		if (!peekToken(TokenKind.PROJECT, true)) {
 			return false;
 		}
+		Assert.state(t != null, "No token");
 		SpelNodeImpl expr = eatExpression();
+		Assert.state(expr != null, "No node");
 		eatToken(TokenKind.RSQUARE);
-		constructedNodes.push(new Projection(nullSafeNavigation, toPos(t), expr));
+		this.constructedNodes.push(new Projection(nullSafeNavigation, t.startPos, t.endPos, expr));
 		return true;
 	}
 
 	// list = LCURLY (element (COMMA element)*) RCURLY
-	private boolean maybeEatInlineList() {
+	// map  = LCURLY (key ':' value (COMMA key ':' value)*) RCURLY
+	private boolean maybeEatInlineListOrMap() {
 		Token t = peekToken();
-		if (!peekToken(TokenKind.LCURLY,true)) {
+		if (!peekToken(TokenKind.LCURLY, true)) {
 			return false;
 		}
+		Assert.state(t != null, "No token");
 		SpelNodeImpl expr = null;
 		Token closingCurly = peekToken();
-		if (peekToken(TokenKind.RCURLY,true)) {
-			// empty list '[]'
-			expr = new InlineList(toPos(t.startpos,closingCurly.endpos));
-		} else {
-			List<SpelNodeImpl> listElements = new ArrayList<SpelNodeImpl>();
-			do {
-				listElements.add(eatExpression());
-			} while (peekToken(TokenKind.COMMA,true));
-			closingCurly = eatToken(TokenKind.RCURLY);
-			expr = new InlineList(toPos(t.startpos,closingCurly.endpos),listElements.toArray(new SpelNodeImpl[listElements.size()]));
+		if (peekToken(TokenKind.RCURLY, true)) {
+			// empty list '{}'
+			Assert.state(closingCurly != null, "No token");
+			expr = new InlineList(t.startPos, closingCurly.endPos);
 		}
-		constructedNodes.push(expr);
+		else if (peekToken(TokenKind.COLON, true)) {
+			closingCurly = eatToken(TokenKind.RCURLY);
+			// empty map '{:}'
+			expr = new InlineMap(t.startPos, closingCurly.endPos);
+		}
+		else {
+			SpelNodeImpl firstExpression = eatExpression();
+			// Next is either:
+			// '}' - end of list
+			// ',' - more expressions in this list
+			// ':' - this is a map!
+			if (peekToken(TokenKind.RCURLY)) {  // list with one item in it
+				List<SpelNodeImpl> elements = new ArrayList<>();
+				elements.add(firstExpression);
+				closingCurly = eatToken(TokenKind.RCURLY);
+				expr = new InlineList(t.startPos, closingCurly.endPos, elements.toArray(new SpelNodeImpl[0]));
+			}
+			else if (peekToken(TokenKind.COMMA, true)) {  // multi-item list
+				List<SpelNodeImpl> elements = new ArrayList<>();
+				elements.add(firstExpression);
+				do {
+					elements.add(eatExpression());
+				}
+				while (peekToken(TokenKind.COMMA, true));
+				closingCurly = eatToken(TokenKind.RCURLY);
+				expr = new InlineList(t.startPos, closingCurly.endPos, elements.toArray(new SpelNodeImpl[0]));
+
+			}
+			else if (peekToken(TokenKind.COLON, true)) {  // map!
+				List<SpelNodeImpl> elements = new ArrayList<>();
+				elements.add(firstExpression);
+				elements.add(eatExpression());
+				while (peekToken(TokenKind.COMMA, true)) {
+					elements.add(eatExpression());
+					eatToken(TokenKind.COLON);
+					elements.add(eatExpression());
+				}
+				closingCurly = eatToken(TokenKind.RCURLY);
+				expr = new InlineMap(t.startPos, closingCurly.endPos, elements.toArray(new SpelNodeImpl[0]));
+			}
+			else {
+				throw internalException(t.startPos, SpelMessage.OOD);
+			}
+		}
+		this.constructedNodes.push(expr);
 		return true;
 	}
 
 	private boolean maybeEatIndexer() {
 		Token t = peekToken();
-		if (!peekToken(TokenKind.LSQUARE,true)) {
+		if (!peekToken(TokenKind.LSQUARE, true)) {
 			return false;
 		}
+		Assert.state(t != null, "No token");
 		SpelNodeImpl expr = eatExpression();
+		Assert.state(expr != null, "No node");
 		eatToken(TokenKind.RSQUARE);
-		constructedNodes.push(new Indexer(toPos(t),expr));
+		this.constructedNodes.push(new Indexer(t.startPos, t.endPos, expr));
 		return true;
 	}
 
@@ -574,15 +696,21 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 		if (!peekSelectToken()) {
 			return false;
 		}
+		Assert.state(t != null, "No token");
 		nextToken();
 		SpelNodeImpl expr = eatExpression();
+		if (expr == null) {
+			throw internalException(t.startPos, SpelMessage.MISSING_SELECTION_EXPRESSION);
+		}
 		eatToken(TokenKind.RSQUARE);
-		if (t.kind==TokenKind.SELECT_FIRST) {
-			constructedNodes.push(new Selection(nullSafeNavigation,Selection.FIRST,toPos(t),expr));
-		} else if (t.kind==TokenKind.SELECT_LAST) {
-			constructedNodes.push(new Selection(nullSafeNavigation,Selection.LAST,toPos(t),expr));
-		} else {
-			constructedNodes.push(new Selection(nullSafeNavigation,Selection.ALL,toPos(t),expr));
+		if (t.kind == TokenKind.SELECT_FIRST) {
+			this.constructedNodes.push(new Selection(nullSafeNavigation, Selection.FIRST, t.startPos, t.endPos, expr));
+		}
+		else if (t.kind == TokenKind.SELECT_LAST) {
+			this.constructedNodes.push(new Selection(nullSafeNavigation, Selection.LAST, t.startPos, t.endPos, expr));
+		}
+		else {
+			this.constructedNodes.push(new Selection(nullSafeNavigation, Selection.ALL, t.startPos, t.endPos, expr));
 		}
 		return true;
 	}
@@ -592,66 +720,96 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	 * TODO AndyC Could create complete identifiers (a.b.c) here rather than a sequence of them? (a, b, c)
 	 */
 	private SpelNodeImpl eatPossiblyQualifiedId() {
-		List<SpelNodeImpl> qualifiedIdPieces = new ArrayList<SpelNodeImpl>();
-		Token startnode = eatToken(TokenKind.IDENTIFIER);
-		qualifiedIdPieces.add(new Identifier(startnode.stringValue(),toPos(startnode)));
-		while (peekToken(TokenKind.DOT,true)) {
-			Token node = eatToken(TokenKind.IDENTIFIER);
-			qualifiedIdPieces.add(new Identifier(node.stringValue(),toPos(node)));
+		Deque<SpelNodeImpl> qualifiedIdPieces = new ArrayDeque<>();
+		Token node = peekToken();
+		while (isValidQualifiedId(node)) {
+			nextToken();
+			if (node.kind != TokenKind.DOT) {
+				qualifiedIdPieces.add(new Identifier(node.stringValue(), node.startPos, node.endPos));
+			}
+			node = peekToken();
 		}
-		return new QualifiedIdentifier(toPos(startnode.startpos,qualifiedIdPieces.get(qualifiedIdPieces.size()-1).getEndPosition()),qualifiedIdPieces.toArray(new SpelNodeImpl[qualifiedIdPieces.size()]));
+		if (qualifiedIdPieces.isEmpty()) {
+			if (node == null) {
+				throw internalException( this.expressionString.length(), SpelMessage.OOD);
+			}
+			throw internalException(node.startPos, SpelMessage.NOT_EXPECTED_TOKEN,
+					"qualified ID", node.getKind().toString().toLowerCase());
+		}
+		return new QualifiedIdentifier(qualifiedIdPieces.getFirst().getStartPosition(),
+				qualifiedIdPieces.getLast().getEndPosition(), qualifiedIdPieces.toArray(new SpelNodeImpl[0]));
 	}
 
-	// This is complicated due to the support for dollars in identifiers.  Dollars are normally separate tokens but
-	// there we want to combine a series of identifiers and dollars into a single identifier
+	private boolean isValidQualifiedId(@Nullable Token node) {
+		if (node == null || node.kind == TokenKind.LITERAL_STRING) {
+			return false;
+		}
+		if (node.kind == TokenKind.DOT || node.kind == TokenKind.IDENTIFIER) {
+			return true;
+		}
+		String value = node.stringValue();
+		return (StringUtils.hasLength(value) && VALID_QUALIFIED_ID_PATTERN.matcher(value).matches());
+	}
+
+	// This is complicated due to the support for dollars in identifiers.
+	// Dollars are normally separate tokens but there we want to combine
+	// a series of identifiers and dollars into a single identifier.
 	private boolean maybeEatMethodOrProperty(boolean nullSafeNavigation) {
 		if (peekToken(TokenKind.IDENTIFIER)) {
-			Token methodOrPropertyName = nextToken();
+			Token methodOrPropertyName = takeToken();
 			SpelNodeImpl[] args = maybeEatMethodArgs();
-			if (args==null) {
+			if (args == null) {
 				// property
-				push(new PropertyOrFieldReference(nullSafeNavigation, methodOrPropertyName.data,toPos(methodOrPropertyName)));
-				return true;
-			} else {
-				// methodreference
-				push(new MethodReference(nullSafeNavigation, methodOrPropertyName.data,toPos(methodOrPropertyName),args));
-				// TODO what is the end position for a method reference? the name or the last arg?
+				push(new PropertyOrFieldReference(nullSafeNavigation, methodOrPropertyName.stringValue(),
+						methodOrPropertyName.startPos, methodOrPropertyName.endPos));
 				return true;
 			}
+			// method reference
+			push(new MethodReference(nullSafeNavigation, methodOrPropertyName.stringValue(),
+					methodOrPropertyName.startPos, methodOrPropertyName.endPos, args));
+			// TODO what is the end position for a method reference? the name or the last arg?
+			return true;
 		}
 		return false;
-
 	}
 
 	//constructor
     //:	('new' qualifiedId LPAREN) => 'new' qualifiedId ctorArgs -> ^(CONSTRUCTOR qualifiedId ctorArgs)
 	private boolean maybeEatConstructorReference() {
 		if (peekIdentifierToken("new")) {
-			Token newToken = nextToken();
+			Token newToken = takeToken();
+			// It looks like a constructor reference but is NEW being used as a map key?
+			if (peekToken(TokenKind.RSQUARE)) {
+				// looks like 'NEW]' (so NEW used as map key)
+				push(new PropertyOrFieldReference(false, newToken.stringValue(), newToken.startPos, newToken.endPos));
+				return true;
+			}
 			SpelNodeImpl possiblyQualifiedConstructorName = eatPossiblyQualifiedId();
-			List<SpelNodeImpl> nodes = new ArrayList<SpelNodeImpl>();
+			List<SpelNodeImpl> nodes = new ArrayList<>();
 			nodes.add(possiblyQualifiedConstructorName);
 			if (peekToken(TokenKind.LSQUARE)) {
 				// array initializer
-				List<SpelNodeImpl> dimensions = new ArrayList<SpelNodeImpl>();
-				while (peekToken(TokenKind.LSQUARE,true)) {
+				List<SpelNodeImpl> dimensions = new ArrayList<>();
+				while (peekToken(TokenKind.LSQUARE, true)) {
 					if (!peekToken(TokenKind.RSQUARE)) {
 						dimensions.add(eatExpression());
-					} else {
+					}
+					else {
 						dimensions.add(null);
 					}
 					eatToken(TokenKind.RSQUARE);
 				}
-				if (maybeEatInlineList()) {
+				if (maybeEatInlineListOrMap()) {
 					nodes.add(pop());
 				}
-				push(new ConstructorReference(toPos(newToken), dimensions.toArray(new SpelNodeImpl[dimensions.size()]),
-						nodes.toArray(new SpelNodeImpl[nodes.size()])));
-			} else {
+				push(new ConstructorReference(newToken.startPos, newToken.endPos,
+						dimensions.toArray(new SpelNodeImpl[0]), nodes.toArray(new SpelNodeImpl[0])));
+			}
+			else {
 				// regular constructor invocation
 				eatConstructorArgs(nodes);
 				// TODO correct end position?
-				push(new ConstructorReference(toPos(newToken), nodes.toArray(new SpelNodeImpl[nodes.size()])));
+				push(new ConstructorReference(newToken.startPos, newToken.endPos, nodes.toArray(new SpelNodeImpl[0])));
 			}
 			return true;
 		}
@@ -659,11 +817,11 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	}
 
 	private void push(SpelNodeImpl newNode) {
-		constructedNodes.push(newNode);
+		this.constructedNodes.push(newNode);
 	}
 
 	private SpelNodeImpl pop() {
-		return constructedNodes.pop();
+		return this.constructedNodes.pop();
 	}
 
 	//	literal
@@ -676,28 +834,37 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	//	| NULL_LITERAL
 	private boolean maybeEatLiteral() {
 		Token t = peekToken();
-		if (t==null) {
+		if (t == null) {
 			return false;
 		}
-		if (t.kind==TokenKind.LITERAL_INT) {
-			push(Literal.getIntLiteral(t.data, toPos(t), 10));
-		} else if (t.kind==TokenKind.LITERAL_LONG) {
-			push(Literal.getLongLiteral(t.data, toPos(t), 10));
-		} else if (t.kind==TokenKind.LITERAL_HEXINT) {
-			push(Literal.getIntLiteral(t.data, toPos(t), 16));
-		} else if (t.kind==TokenKind.LITERAL_HEXLONG) {
-			push(Literal.getLongLiteral(t.data, toPos(t), 16));
-		} else if (t.kind==TokenKind.LITERAL_REAL) {
-			push(Literal.getRealLiteral(t.data, toPos(t),false));
-		} else if (t.kind==TokenKind.LITERAL_REAL_FLOAT) {
-			push(Literal.getRealLiteral(t.data, toPos(t), true));
-		} else if (peekIdentifierToken("true")) {
-			push(new BooleanLiteral(t.data,toPos(t),true));
-		} else if (peekIdentifierToken("false")) {
-			push(new BooleanLiteral(t.data,toPos(t),false));
-		} else if (t.kind==TokenKind.LITERAL_STRING) {
-			push(new StringLiteral(t.data,toPos(t),t.data));
-		} else {
+		if (t.kind == TokenKind.LITERAL_INT) {
+			push(Literal.getIntLiteral(t.stringValue(), t.startPos, t.endPos, 10));
+		}
+		else if (t.kind == TokenKind.LITERAL_LONG) {
+			push(Literal.getLongLiteral(t.stringValue(), t.startPos, t.endPos, 10));
+		}
+		else if (t.kind == TokenKind.LITERAL_HEXINT) {
+			push(Literal.getIntLiteral(t.stringValue(), t.startPos, t.endPos, 16));
+		}
+		else if (t.kind == TokenKind.LITERAL_HEXLONG) {
+			push(Literal.getLongLiteral(t.stringValue(), t.startPos, t.endPos, 16));
+		}
+		else if (t.kind == TokenKind.LITERAL_REAL) {
+			push(Literal.getRealLiteral(t.stringValue(), t.startPos, t.endPos, false));
+		}
+		else if (t.kind == TokenKind.LITERAL_REAL_FLOAT) {
+			push(Literal.getRealLiteral(t.stringValue(), t.startPos, t.endPos, true));
+		}
+		else if (peekIdentifierToken("true")) {
+			push(new BooleanLiteral(t.stringValue(), t.startPos, t.endPos, true));
+		}
+		else if (peekIdentifierToken("false")) {
+			push(new BooleanLiteral(t.stringValue(), t.startPos, t.endPos, false));
+		}
+		else if (t.kind == TokenKind.LITERAL_STRING) {
+			push(new StringLiteral(t.stringValue(), t.startPos, t.endPos, t.stringValue()));
+		}
+		else {
 			return false;
 		}
 		nextToken();
@@ -709,10 +876,12 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 		if (peekToken(TokenKind.LPAREN)) {
 			nextToken();
 			SpelNodeImpl expr = eatExpression();
+			Assert.state(expr != null, "No node");
 			eatToken(TokenKind.RPAREN);
 			push(expr);
 			return true;
-		} else {
+		}
+		else {
 			return false;
 		}
 	}
@@ -720,9 +889,10 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 	// relationalOperator
 	// : EQUAL | NOT_EQUAL | LESS_THAN | LESS_THAN_OR_EQUAL | GREATER_THAN
 	// | GREATER_THAN_OR_EQUAL | INSTANCEOF | BETWEEN | MATCHES
+	@Nullable
 	private Token maybeEatRelationalOperator() {
 		Token t = peekToken();
-		if (t==null) {
+		if (t == null) {
 			return null;
 		}
 		if (t.isNumericRelationalOperator()) {
@@ -732,9 +902,11 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 			String idString = t.stringValue();
 			if (idString.equalsIgnoreCase("instanceof")) {
 				return t.asInstanceOfToken();
-			} else if (idString.equalsIgnoreCase("matches")) {
+			}
+			if (idString.equalsIgnoreCase("matches")) {
 				return t.asMatchesToken();
-			} else if (idString.equalsIgnoreCase("between")) {
+			}
+			if (idString.equalsIgnoreCase("between")) {
 				return t.asBetweenToken();
 			}
 		}
@@ -743,114 +915,130 @@ class InternalSpelExpressionParser extends TemplateAwareExpressionParser {
 
 	private Token eatToken(TokenKind expectedKind) {
 		Token t = nextToken();
-		if (t==null) {
-			raiseInternalException( expressionString.length(), SpelMessage.OOD);
+		if (t == null) {
+			int pos = this.expressionString.length();
+			throw internalException(pos, SpelMessage.OOD);
 		}
-		if (t.kind!=expectedKind) {
-			raiseInternalException(t.startpos,SpelMessage.NOT_EXPECTED_TOKEN, expectedKind.toString().toLowerCase(),t.getKind().toString().toLowerCase());
+		if (t.kind != expectedKind) {
+			throw internalException(t.startPos, SpelMessage.NOT_EXPECTED_TOKEN,
+					expectedKind.toString().toLowerCase(), t.getKind().toString().toLowerCase());
 		}
 		return t;
 	}
 
 	private boolean peekToken(TokenKind desiredTokenKind) {
-		return peekToken(desiredTokenKind,false);
+		return peekToken(desiredTokenKind, false);
 	}
 
 	private boolean peekToken(TokenKind desiredTokenKind, boolean consumeIfMatched) {
-		if (!moreTokens()) {
+		Token t = peekToken();
+		if (t == null) {
 			return false;
 		}
-		Token t = peekToken();
-		if (t.kind==desiredTokenKind) {
+		if (t.kind == desiredTokenKind) {
 			if (consumeIfMatched) {
-				tokenStreamPointer++;
+				this.tokenStreamPointer++;
 			}
 			return true;
-		} else {
-			if (desiredTokenKind == TokenKind.IDENTIFIER) {
-				// might be one of the textual forms of the operators (e.g. NE for != ) - in which case we can treat it as an identifier
-				// The list is represented here: Tokenizer.alternativeOperatorNames and those ones are in order in the TokenKind enum
-				if (t.kind.ordinal()>=TokenKind.DIV.ordinal() && t.kind.ordinal()<=TokenKind.NOT.ordinal() && t.data!=null) {
-					// if t.data were null, we'd know it wasn't the textual form, it was the symbol form
-					return true;
-				}
+		}
+
+		if (desiredTokenKind == TokenKind.IDENTIFIER) {
+			// Might be one of the textual forms of the operators (e.g. NE for != ) -
+			// in which case we can treat it as an identifier. The list is represented here:
+			// Tokenizer.alternativeOperatorNames and those ones are in order in the TokenKind enum.
+			if (t.kind.ordinal() >= TokenKind.DIV.ordinal() && t.kind.ordinal() <= TokenKind.NOT.ordinal() &&
+					t.data != null) {
+				// if t.data were null, we'd know it wasn't the textual form, it was the symbol form
+				return true;
 			}
+		}
+		return false;
+	}
+
+	private boolean peekToken(TokenKind possible1, TokenKind possible2) {
+		Token t = peekToken();
+		if (t == null) {
 			return false;
 		}
+		return (t.kind == possible1 || t.kind == possible2);
 	}
 
-	private boolean peekToken(TokenKind possible1,TokenKind possible2) {
-		if (!moreTokens()) return false;
+	private boolean peekToken(TokenKind possible1, TokenKind possible2, TokenKind possible3) {
 		Token t = peekToken();
-		return t.kind==possible1 || t.kind==possible2;
-	}
-
-	private boolean peekToken(TokenKind possible1,TokenKind possible2, TokenKind possible3) {
-		if (!moreTokens()) return false;
-		Token t = peekToken();
-		return t.kind==possible1 || t.kind==possible2 || t.kind==possible3;
+		if (t == null) {
+			return false;
+		}
+		return (t.kind == possible1 || t.kind == possible2 || t.kind == possible3);
 	}
 
 	private boolean peekIdentifierToken(String identifierString) {
-		if (!moreTokens()) {
+		Token t = peekToken();
+		if (t == null) {
 			return false;
 		}
-		Token t = peekToken();
-		return t.kind==TokenKind.IDENTIFIER && t.stringValue().equalsIgnoreCase(identifierString);
+		return (t.kind == TokenKind.IDENTIFIER && identifierString.equalsIgnoreCase(t.stringValue()));
 	}
 
 	private boolean peekSelectToken() {
-		if (!moreTokens()) return false;
 		Token t = peekToken();
-		return t.kind==TokenKind.SELECT || t.kind==TokenKind.SELECT_FIRST || t.kind==TokenKind.SELECT_LAST;
+		if (t == null) {
+			return false;
+		}
+		return (t.kind == TokenKind.SELECT || t.kind == TokenKind.SELECT_FIRST || t.kind == TokenKind.SELECT_LAST);
 	}
 
-
-	private boolean moreTokens() {
-		return tokenStreamPointer<tokenStream.size();
+	private Token takeToken() {
+		if (this.tokenStreamPointer >= this.tokenStreamLength) {
+			throw new IllegalStateException("No token");
+		}
+		return this.tokenStream.get(this.tokenStreamPointer++);
 	}
 
+	@Nullable
 	private Token nextToken() {
-		if (tokenStreamPointer>=tokenStreamLength) {
+		if (this.tokenStreamPointer >= this.tokenStreamLength) {
 			return null;
 		}
-		return tokenStream.get(tokenStreamPointer++);
+		return this.tokenStream.get(this.tokenStreamPointer++);
 	}
 
+	@Nullable
 	private Token peekToken() {
-		if (tokenStreamPointer>=tokenStreamLength) {
+		if (this.tokenStreamPointer >= this.tokenStreamLength) {
 			return null;
 		}
-		return tokenStream.get(tokenStreamPointer);
+		return this.tokenStream.get(this.tokenStreamPointer);
 	}
 
-	private void raiseInternalException(int pos, SpelMessage message,Object... inserts) {
-		throw new InternalParseException(new SpelParseException(expressionString,pos,message,inserts));
-	}
-
-	public String toString(Token t) {
+	public String toString(@Nullable Token t) {
+		if (t == null) {
+			return "";
+		}
 		if (t.getKind().hasPayload()) {
 			return t.stringValue();
-		} else {
-			return t.kind.toString().toLowerCase();
+		}
+		return t.kind.toString().toLowerCase();
+	}
+
+	private void checkOperands(Token token, @Nullable SpelNodeImpl left, @Nullable SpelNodeImpl right) {
+		checkLeftOperand(token, left);
+		checkRightOperand(token, right);
+	}
+
+	private void checkLeftOperand(Token token, @Nullable SpelNodeImpl operandExpression) {
+		if (operandExpression == null) {
+			throw internalException(token.startPos, SpelMessage.LEFT_OPERAND_PROBLEM);
 		}
 	}
 
-	private void checkRightOperand(Token token, SpelNodeImpl operandExpression) {
-		if (operandExpression==null) {
-			raiseInternalException(token.startpos,SpelMessage.RIGHT_OPERAND_PROBLEM);
+	private void checkRightOperand(Token token, @Nullable SpelNodeImpl operandExpression) {
+		if (operandExpression == null) {
+			throw internalException(token.startPos, SpelMessage.RIGHT_OPERAND_PROBLEM);
 		}
 	}
 
-	/**
-	 * Compress the start and end of a token into a single int
-	 */
-	private int toPos(Token t) {
-		return (t.startpos<<16)+t.endpos;
-	}
-
-	private int toPos(int start,int end) {
-		return (start<<16)+end;
+	private InternalParseException internalException(int startPos, SpelMessage message, Object... inserts) {
+		return new InternalParseException(new SpelParseException(this.expressionString, startPos, message, inserts));
 	}
 
 }
