@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2008 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,6 +18,7 @@ package org.springframework.jdbc.core;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
@@ -25,959 +26,398 @@ import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Stream;
 
-import org.easymock.MockControl;
-import org.apache.commons.logging.LogFactory;
+import javax.sql.DataSource;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.dao.IncorrectResultSizeDataAccessException;
-import org.springframework.jdbc.AbstractJdbcTests;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
  * @author Juergen Hoeller
+ * @author Phillip Webb
+ * @author Rob Winch
  * @since 19.12.2004
  */
-public class JdbcTemplateQueryTests extends AbstractJdbcTests {
+public class JdbcTemplateQueryTests {
 
-	private final boolean debugEnabled = LogFactory.getLog(JdbcTemplate.class).isDebugEnabled();
+	private Connection connection;
 
-	private MockControl ctrlStatement;
-	private Statement mockStatement;
-	private MockControl ctrlPreparedStatement;
-	private PreparedStatement mockPreparedStatement;
-	private MockControl ctrlResultSet;
-	private ResultSet mockResultSet;
-	private MockControl ctrlResultSetMetaData;
-	private ResultSetMetaData mockResultSetMetaData;
+	private DataSource dataSource;
 
-	protected void setUp() throws Exception {
-		super.setUp();
+	private Statement statement;
 
-		ctrlStatement = MockControl.createControl(Statement.class);
-		mockStatement = (Statement) ctrlStatement.getMock();
-		ctrlPreparedStatement = MockControl.createControl(PreparedStatement.class);
-		mockPreparedStatement = (PreparedStatement) ctrlPreparedStatement.getMock();
-		ctrlResultSet = MockControl.createControl(ResultSet.class);
-		mockResultSet = (ResultSet) ctrlResultSet.getMock();
-		ctrlResultSetMetaData = MockControl.createControl(ResultSetMetaData.class);
-		mockResultSetMetaData = (ResultSetMetaData) ctrlResultSetMetaData.getMock();
+	private PreparedStatement preparedStatement;
+
+	private ResultSet resultSet;
+
+	private ResultSetMetaData resultSetMetaData;
+
+	private JdbcTemplate template;
+
+
+	@BeforeEach
+	public void setUp() throws Exception {
+		this.connection = mock(Connection.class);
+		this.dataSource = mock(DataSource.class);
+		this.statement = mock(Statement.class);
+		this.preparedStatement = mock(PreparedStatement.class);
+		this.resultSet = mock(ResultSet.class);
+		this.resultSetMetaData = mock(ResultSetMetaData.class);
+		this.template = new JdbcTemplate(this.dataSource);
+		given(this.dataSource.getConnection()).willReturn(this.connection);
+		given(this.resultSet.getMetaData()).willReturn(this.resultSetMetaData);
+		given(this.resultSetMetaData.getColumnCount()).willReturn(1);
+		given(this.resultSetMetaData.getColumnLabel(1)).willReturn("age");
+		given(this.connection.createStatement()).willReturn(this.statement);
+		given(this.connection.prepareStatement(anyString())).willReturn(this.preparedStatement);
+		given(this.preparedStatement.executeQuery()).willReturn(this.resultSet);
+		given(this.statement.executeQuery(anyString())).willReturn(this.resultSet);
 	}
 
-	protected void replay() {
-		super.replay();
-		ctrlStatement.replay();
-		ctrlPreparedStatement.replay();
-		ctrlResultSet.replay();
-		ctrlResultSetMetaData.replay();
-	}
 
-	protected void tearDown() throws Exception {
-		super.tearDown();
-		if (shouldVerify()) {
-			ctrlStatement.verify();
-			ctrlPreparedStatement.verify();
-			ctrlResultSet.verify();
-			ctrlResultSetMetaData.verify();
-		}
-	}
-
+	@Test
 	public void testQueryForList() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1, 2);
-		mockResultSetMetaData.getColumnLabel(1);
-		ctrlResultSetMetaData.setReturnValue("age", 2);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData, 2);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(11));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(12));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql);
-		assertEquals("All rows returned", 2, li.size());
-		assertEquals("First row is Integer", 11, ((Integer)((Map)li.get(0)).get("age")).intValue());
-		assertEquals("Second row is Integer", 12, ((Integer)((Map)li.get(1)).get("age")).intValue());
+		given(this.resultSet.next()).willReturn(true, true, false);
+		given(this.resultSet.getObject(1)).willReturn(11, 12);
+		List<Map<String, Object>> li = this.template.queryForList(sql);
+		assertThat(li.size()).as("All rows returned").isEqualTo(2);
+		assertThat(((Integer) li.get(0).get("age")).intValue()).as("First row is Integer").isEqualTo(11);
+		assertThat(((Integer) li.get(1).get("age")).intValue()).as("Second row is Integer").isEqualTo(12);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForListWithEmptyResult() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < 3";
-
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		List li = template.queryForList(sql);
-		assertEquals("All rows returned", 0, li.size());
+		given(this.resultSet.next()).willReturn(false);
+		List<Map<String, Object>> li = this.template.queryForList(sql);
+		assertThat(li.size()).as("All rows returned").isEqualTo(0);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForListWithSingleRowAndColumn() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-		mockResultSetMetaData.getColumnLabel(1);
-		ctrlResultSetMetaData.setReturnValue("age", 1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(11));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql);
-		assertEquals("All rows returned", 1, li.size());
-		assertEquals("First row is Integer", 11, ((Integer)((Map)li.get(0)).get("age")).intValue());
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getObject(1)).willReturn(11);
+		List<Map<String, Object>> li = this.template.queryForList(sql);
+		assertThat(li.size()).as("All rows returned").isEqualTo(1);
+		assertThat(((Integer) li.get(0).get("age")).intValue()).as("First row is Integer").isEqualTo(11);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForListWithIntegerElement() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(11);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql, Integer.class);
-		assertEquals("All rows returned", 1, li.size());
-		assertEquals("Element is Integer", 11, ((Integer) li.get(0)).intValue());
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(11);
+		List<Integer> li = this.template.queryForList(sql, Integer.class);
+		assertThat(li.size()).as("All rows returned").isEqualTo(1);
+		assertThat(li.get(0).intValue()).as("Element is Integer").isEqualTo(11);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForMapWithSingleRowAndColumn() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-		mockResultSetMetaData.getColumnLabel(1);
-		ctrlResultSetMetaData.setReturnValue("age", 1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(11));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		Map map = template.queryForMap(sql);
-		assertEquals("Wow is Integer", 11, ((Integer) map.get("age")).intValue());
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getObject(1)).willReturn(11);
+		Map<String, Object> map = this.template.queryForMap(sql);
+		assertThat(((Integer) map.get("age")).intValue()).as("Wow is Integer").isEqualTo(11);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForObjectThrowsIncorrectResultSizeForMoreThanOneRow() throws Exception {
 		String sql = "select pass from t_account where first_name='Alef'";
-		
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getString(1);
-		ctrlResultSet.setReturnValue("pass");
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-		mockResultSet.getString(1);
-		ctrlResultSet.setReturnValue("pass");
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		try {
-			template.queryForObject(sql, String.class);
-			fail("Should have thrown IncorrectResultSizeDataAccessException");
-		}
-		catch (IncorrectResultSizeDataAccessException ex) {
-			// expected
-		}
+		given(this.resultSet.next()).willReturn(true, true, false);
+		given(this.resultSet.getString(1)).willReturn("pass");
+		assertThatExceptionOfType(IncorrectResultSizeDataAccessException.class).isThrownBy(() ->
+				this.template.queryForObject(sql, String.class));
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForObjectWithRowMapper() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(22);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		Object o = template.queryForObject(sql, new RowMapper() {
-			public Object mapRow(ResultSet rs, int rowNum) throws SQLException {
-				return new Integer(rs.getInt(1));
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		Object o = this.template.queryForObject(sql, new RowMapper<Integer>() {
+			@Override
+			public Integer mapRow(ResultSet rs, int rowNum) throws SQLException {
+				return rs.getInt(1);
 			}
 		});
-		assertTrue("Correct result type", o instanceof Integer);
+		assertThat(o instanceof Integer).as("Correct result type").isTrue();
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
+	public void testQueryForStreamWithRowMapper() throws Exception {
+		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		AtomicInteger count = new AtomicInteger();
+		try (Stream<Integer> s = this.template.queryForStream(sql, (rs, rowNum) -> rs.getInt(1))) {
+			s.forEach(val -> {
+				count.incrementAndGet();
+				assertThat(val).isEqualTo(22);
+			});
+		}
+		assertThat(count.get()).isEqualTo(1);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
+	}
+
+	@Test
 	public void testQueryForObjectWithString() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getString(1);
-		ctrlResultSet.setReturnValue("myvalue");
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		assertEquals("myvalue", template.queryForObject(sql, String.class));
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getString(1)).willReturn("myvalue");
+		assertThat(this.template.queryForObject(sql, String.class)).isEqualTo("myvalue");
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForObjectWithBigInteger() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue("22");
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		assertEquals(new BigInteger("22"), template.queryForObject(sql, BigInteger.class));
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getObject(1, BigInteger.class)).willReturn(new BigInteger("22"));
+		assertThat(this.template.queryForObject(sql, BigInteger.class)).isEqualTo(new BigInteger("22"));
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForObjectWithBigDecimal() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getBigDecimal(1);
-		ctrlResultSet.setReturnValue(new BigDecimal(22.5));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		assertEquals(new BigDecimal(22.5), template.queryForObject(sql, BigDecimal.class));
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getBigDecimal(1)).willReturn(new BigDecimal("22.5"));
+		assertThat(this.template.queryForObject(sql, BigDecimal.class)).isEqualTo(new BigDecimal("22.5"));
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForObjectWithInteger() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(22);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		assertEquals(new Integer(22), template.queryForObject(sql, Integer.class));
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		assertThat(this.template.queryForObject(sql, Integer.class)).isEqualTo(Integer.valueOf(22));
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForObjectWithIntegerAndNull() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(0);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		assertNull(template.queryForObject(sql, Integer.class));
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(0);
+		given(this.resultSet.wasNull()).willReturn(true);
+		assertThat(this.template.queryForObject(sql, Integer.class)).isNull();
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
 	public void testQueryForInt() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(22);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		int i = template.queryForInt(sql);
-		assertEquals("Return of an int", 22, i);
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		int i = this.template.queryForObject(sql, Integer.class).intValue();
+		assertThat(i).as("Return of an int").isEqualTo(22);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
+	public void testQueryForIntPrimitive() throws Exception {
+		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		int i = this.template.queryForObject(sql, int.class);
+		assertThat(i).as("Return of an int").isEqualTo(22);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
+	}
+
+	@Test
 	public void testQueryForLong() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getLong(1);
-		ctrlResultSet.setReturnValue(87);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockStatement.executeQuery(sql);
-		ctrlStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockStatement.getWarnings();
-			ctrlStatement.setReturnValue(null);
-		}
-		mockStatement.close();
-		ctrlStatement.setVoidCallable();
-
-		mockConnection.createStatement();
-		ctrlConnection.setReturnValue(mockStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		long l = template.queryForLong(sql);
-		assertEquals("Return of a long", 87, l);
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getLong(1)).willReturn(87L);
+		long l = this.template.queryForObject(sql, Long.class).longValue();
+		assertThat(l).as("Return of a long").isEqualTo(87);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
 	}
 
+	@Test
+	public void testQueryForLongPrimitive() throws Exception {
+		String sql = "SELECT AGE FROM CUSTMR WHERE ID = 3";
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getLong(1)).willReturn(87L);
+		long l = this.template.queryForObject(sql, long.class);
+		assertThat(l).as("Return of a long").isEqualTo(87);
+		verify(this.resultSet).close();
+		verify(this.statement).close();
+	}
+
+	@Test
 	public void testQueryForListWithArgs() throws Exception {
 		doTestQueryForListWithArgs("SELECT AGE FROM CUSTMR WHERE ID < ?");
 	}
 
+	@Test
 	public void testQueryForListIsNotConfusedByNamedParameterPrefix() throws Exception {
 		doTestQueryForListWithArgs("SELECT AGE FROM PREFIX:CUSTMR WHERE ID < ?");
 	}
 
 	private void doTestQueryForListWithArgs(String sql) throws Exception {
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1, 2);
-		mockResultSetMetaData.getColumnLabel(1);
-		ctrlResultSetMetaData.setReturnValue("age", 2);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData, 2);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(11));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(12));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql, new Object[] {new Integer(3)});
-		assertEquals("All rows returned", 2, li.size());
-		assertEquals("First row is Integer", 11, ((Integer)((Map)li.get(0)).get("age")).intValue());
-		assertEquals("Second row is Integer", 12, ((Integer)((Map)li.get(1)).get("age")).intValue());
+		given(this.resultSet.next()).willReturn(true, true, false);
+		given(this.resultSet.getObject(1)).willReturn(11, 12);
+		List<Map<String, Object>> li = this.template.queryForList(sql, 3);
+		assertThat(li.size()).as("All rows returned").isEqualTo(2);
+		assertThat(((Integer) li.get(0).get("age")).intValue()).as("First row is Integer").isEqualTo(11);
+		assertThat(((Integer) li.get(1).get("age")).intValue()).as("Second row is Integer").isEqualTo(12);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForListWithArgsAndEmptyResult() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < ?";
-
-		ctrlResultSet = MockControl.createControl(ResultSet.class);
-		mockResultSet = (ResultSet) ctrlResultSet.getMock();
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql, new Object[] {new Integer(3)});
-		assertEquals("All rows returned", 0, li.size());
+		given(this.resultSet.next()).willReturn(false);
+		List<Map<String, Object>> li = this.template.queryForList(sql, 3);
+		assertThat(li.size()).as("All rows returned").isEqualTo(0);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForListWithArgsAndSingleRowAndColumn() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < ?";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-		mockResultSetMetaData.getColumnLabel(1);
-		ctrlResultSetMetaData.setReturnValue("age", 1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(11));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql, new Object[] {new Integer(3)});
-		assertEquals("All rows returned", 1, li.size());
-		assertEquals("First row is Integer", 11, ((Integer)((Map)li.get(0)).get("age")).intValue());
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getObject(1)).willReturn(11);
+		List<Map<String, Object>> li = this.template.queryForList(sql, 3);
+		assertThat(li.size()).as("All rows returned").isEqualTo(1);
+		assertThat(((Integer) li.get(0).get("age")).intValue()).as("First row is Integer").isEqualTo(11);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForListWithArgsAndIntegerElementAndSingleRowAndColumn() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < ?";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(11);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		List li = template.queryForList(sql, new Object[] {new Integer(3)}, Integer.class);
-		assertEquals("All rows returned", 1, li.size());
-		assertEquals("First row is Integer", 11, ((Integer) li.get(0)).intValue());
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(11);
+		List<Integer> li = this.template.queryForList(sql, Integer.class, 3);
+		assertThat(li.size()).as("All rows returned").isEqualTo(1);
+		assertThat(li.get(0).intValue()).as("First row is Integer").isEqualTo(11);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForMapWithArgsAndSingleRowAndColumn() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID < ?";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-		mockResultSetMetaData.getColumnLabel(1);
-		ctrlResultSetMetaData.setReturnValue("age", 1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getObject(1);
-		ctrlResultSet.setReturnValue(new Integer(11));
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		Map map = template.queryForMap(sql, new Object[] {new Integer(3)});
-		assertEquals("Row is Integer", 11, ((Integer) map.get("age")).intValue());
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getObject(1)).willReturn(11);
+		Map<String, Object> map = this.template.queryForMap(sql, 3);
+		assertThat(((Integer) map.get("age")).intValue()).as("Row is Integer").isEqualTo(11);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForObjectWithArgsAndRowMapper() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = ?";
-
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(22);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		Object o = template.queryForObject(sql, new Object[] {new Integer(3)}, new RowMapper() {
-			public Object mapRow(ResultSet rs, int rowNum) throws SQLException {
-				return new Integer(rs.getInt(1));
-			}
-		});
-		assertTrue("Correct result type", o instanceof Integer);
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		Object o = this.template.queryForObject(sql, (rs, rowNum) -> rs.getInt(1), 3);
+		assertThat(o instanceof Integer).as("Correct result type").isTrue();
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
+	public void testQueryForStreamWithArgsAndRowMapper() throws Exception {
+		String sql = "SELECT AGE FROM CUSTMR WHERE ID = ?";
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		AtomicInteger count = new AtomicInteger();
+		try (Stream<Integer> s = this.template.queryForStream(sql, (rs, rowNum) -> rs.getInt(1), 3)) {
+			s.forEach(val -> {
+				count.incrementAndGet();
+				assertThat(val).isEqualTo(22);
+			});
+		}
+		assertThat(count.get()).isEqualTo(1);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
+	}
+
+	@Test
 	public void testQueryForObjectWithArgsAndInteger() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = ?";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(22);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-
-		Object o = template.queryForObject(sql, new Object[] {new Integer(3)}, Integer.class);
-		assertTrue("Correct result type", o instanceof Integer);
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		Object o = this.template.queryForObject(sql, Integer.class, 3);
+		assertThat(o instanceof Integer).as("Correct result type").isTrue();
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForIntWithArgs() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = ?";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getInt(1);
-		ctrlResultSet.setReturnValue(22);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		int i = template.queryForInt(sql, new Object[] {new Integer(3)});
-		assertEquals("Return of an int", 22, i);
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getInt(1)).willReturn(22);
+		int i = this.template.queryForObject(sql, Integer.class, 3).intValue();
+		assertThat(i).as("Return of an int").isEqualTo(22);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
+	@Test
 	public void testQueryForLongWithArgs() throws Exception {
 		String sql = "SELECT AGE FROM CUSTMR WHERE ID = ?";
-
-		mockResultSetMetaData.getColumnCount();
-		ctrlResultSetMetaData.setReturnValue(1);
-
-		mockResultSet.getMetaData();
-		ctrlResultSet.setReturnValue(mockResultSetMetaData);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(true);
-		mockResultSet.getLong(1);
-		ctrlResultSet.setReturnValue(87);
-		mockResultSet.wasNull();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.next();
-		ctrlResultSet.setReturnValue(false);
-		mockResultSet.close();
-		ctrlResultSet.setVoidCallable();
-
-		mockPreparedStatement.setObject(1, new Integer(3));
-		ctrlPreparedStatement.setVoidCallable();
-		mockPreparedStatement.executeQuery();
-		ctrlPreparedStatement.setReturnValue(mockResultSet);
-		if (debugEnabled) {
-			mockPreparedStatement.getWarnings();
-			ctrlPreparedStatement.setReturnValue(null);
-		}
-		mockPreparedStatement.close();
-		ctrlPreparedStatement.setVoidCallable();
-
-		mockConnection.prepareStatement(sql);
-		ctrlConnection.setReturnValue(mockPreparedStatement);
-
-		replay();
-
-		JdbcTemplate template = new JdbcTemplate(mockDataSource);
-		long l = template.queryForLong(sql, new Object[] {new Integer(3)});
-		assertEquals("Return of a long", 87, l);
+		given(this.resultSet.next()).willReturn(true, false);
+		given(this.resultSet.getLong(1)).willReturn(87L);
+		long l = this.template.queryForObject(sql, Long.class, 3).longValue();
+		assertThat(l).as("Return of a long").isEqualTo(87);
+		verify(this.preparedStatement).setObject(1, 3);
+		verify(this.resultSet).close();
+		verify(this.preparedStatement).close();
 	}
 
 }
