@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -21,18 +21,21 @@ import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
+
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import org.springframework.lang.Nullable;
 import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.util.WebUtils;
 
 /**
- * {@link org.springframework.web.servlet.HandlerExceptionResolver} implementation that allows for mapping exception
- * class names to view names, either for a set of given handlers or for all handlers in the DispatcherServlet.
+ * {@link org.springframework.web.servlet.HandlerExceptionResolver} implementation
+ * that allows for mapping exception class names to view names, either for a set of
+ * given handlers or for all handlers in the DispatcherServlet.
  *
- * <p>Error views are analogous to error page JSPs, but can be used with any kind of exception including any checked
- * one, with fine-granular mappings for specific handlers.
+ * <p>Error views are analogous to error page JSPs, but can be used with any kind of
+ * exception including any checked one, with fine-granular mappings for specific handlers.
  *
  * @author Juergen Hoeller
  * @author Arjen Poutsma
@@ -45,23 +48,29 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	/** The default name of the exception attribute: "exception". */
 	public static final String DEFAULT_EXCEPTION_ATTRIBUTE = "exception";
 
+
+	@Nullable
 	private Properties exceptionMappings;
 
+	@Nullable
 	private Class<?>[] excludedExceptions;
 
+	@Nullable
 	private String defaultErrorView;
 
+	@Nullable
 	private Integer defaultStatusCode;
 
-	private Map<String, Integer> statusCodes = new HashMap<String, Integer>();
+	private Map<String, Integer> statusCodes = new HashMap<>();
 
+	@Nullable
 	private String exceptionAttribute = DEFAULT_EXCEPTION_ATTRIBUTE;
 
 
 	/**
 	 * Set the mappings between exception class names and error view names.
 	 * The exception class name can be a substring, with no wildcard support at present.
-	 * A value of "ServletException" would match <code>javax.servlet.ServletException</code>
+	 * A value of "ServletException" would match {@code javax.servlet.ServletException}
 	 * and subclasses, for example.
 	 * <p><b>NB:</b> Consider carefully how
 	 * specific the pattern is, and whether to include package information (which isn't mandatory).
@@ -87,25 +96,27 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	}
 
 	/**
-	 * Set the name of the default error view. This view will be returned if no specific mapping was found. <p>Default is
-	 * none.
+	 * Set the name of the default error view.
+	 * This view will be returned if no specific mapping was found.
+	 * <p>Default is none.
 	 */
 	public void setDefaultErrorView(String defaultErrorView) {
 		this.defaultErrorView = defaultErrorView;
 	}
 
 	/**
-	 * Set the HTTP status code that this exception resolver will apply for a given resolved error view. Keys are
-	 * view names; values are status codes.
-	 * <p>Note that this error code will only get applied in case of a top-level request. It will not be set for an include
-	 * request, since the HTTP status cannot be modified from within an include.
+	 * Set the HTTP status code that this exception resolver will apply for a given
+	 * resolved error view. Keys are view names; values are status codes.
+	 * <p>Note that this error code will only get applied in case of a top-level request.
+	 * It will not be set for an include request, since the HTTP status cannot be modified
+	 * from within an include.
 	 * <p>If not specified, the default status code will be applied.
 	 * @see #setDefaultStatusCode(int)
 	 */
 	public void setStatusCodes(Properties statusCodes) {
 		for (Enumeration<?> enumeration = statusCodes.propertyNames(); enumeration.hasMoreElements();) {
 			String viewName = (String) enumeration.nextElement();
-			Integer statusCode = new Integer(statusCodes.getProperty(viewName));
+			Integer statusCode = Integer.valueOf(statusCodes.getProperty(viewName));
 			this.statusCodes.put(viewName, statusCode);
 		}
 	}
@@ -123,17 +134,18 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	 * Keys are view names; values are status codes.
 	 */
 	public Map<String, Integer> getStatusCodesAsMap() {
-		return Collections.unmodifiableMap(statusCodes);
+		return Collections.unmodifiableMap(this.statusCodes);
 	}
 
 	/**
-	 * Set the default HTTP status code that this exception resolver will apply if it resolves an error view and if there
-	 * is no status code mapping defined.
-	 * <p>Note that this error code will only get applied in case of a top-level request. It will not be set for an
-	 * include request, since the HTTP status cannot be modified from within an include.
-	 * <p>If not specified, no status code will be applied, either leaving this to the controller or view, or keeping
-	 * the servlet engine's default of 200 (OK).
-	 * @param defaultStatusCode HTTP status code value, for example 500
+	 * Set the default HTTP status code that this exception resolver will apply
+	 * if it resolves an error view and if there is no status code mapping defined.
+	 * <p>Note that this error code will only get applied in case of a top-level request.
+	 * It will not be set for an include request, since the HTTP status cannot be modified
+	 * from within an include.
+	 * <p>If not specified, no status code will be applied, either leaving this to the
+	 * controller or view, or keeping the servlet engine's default of 200 (OK).
+	 * @param defaultStatusCode the HTTP status code value, for example 500
 	 * ({@link HttpServletResponse#SC_INTERNAL_SERVER_ERROR}) or 404 ({@link HttpServletResponse#SC_NOT_FOUND})
 	 * @see #setStatusCodes(Properties)
 	 */
@@ -142,31 +154,36 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	}
 
 	/**
-	 * Set the name of the model attribute as which the exception should be exposed. Default is "exception". <p>This can be
-	 * either set to a different attribute name or to <code>null</code> for not exposing an exception attribute at all.
+	 * Set the name of the model attribute as which the exception should be exposed.
+	 * Default is "exception".
+	 * <p>This can be either set to a different attribute name or to {@code null}
+	 * for not exposing an exception attribute at all.
 	 * @see #DEFAULT_EXCEPTION_ATTRIBUTE
 	 */
-	public void setExceptionAttribute(String exceptionAttribute) {
+	public void setExceptionAttribute(@Nullable String exceptionAttribute) {
 		this.exceptionAttribute = exceptionAttribute;
 	}
 
+
 	/**
-	 * Actually resolve the given exception that got thrown during on handler execution, returning a ModelAndView that
-	 * represents a specific error page if appropriate. <p>May be overridden in subclasses, in order to apply specific
-	 * exception checks. Note that this template method will be invoked <i>after</i> checking whether this resolved applies
-	 * ("mappedHandlers" etc), so an implementation may simply proceed with its actual exception handling.
+	 * Actually resolve the given exception that got thrown during on handler execution,
+	 * returning a ModelAndView that represents a specific error page if appropriate.
+	 * <p>May be overridden in subclasses, in order to apply specific exception checks.
+	 * Note that this template method will be invoked <i>after</i> checking whether this
+	 * resolved applies ("mappedHandlers" etc), so an implementation may simply proceed
+	 * with its actual exception handling.
 	 * @param request current HTTP request
 	 * @param response current HTTP response
-	 * @param handler the executed handler, or <code>null</code> if none chosen at the time of the exception (for example,
-	 * if multipart resolution failed)
+	 * @param handler the executed handler, or {@code null} if none chosen at the time
+	 * of the exception (for example, if multipart resolution failed)
 	 * @param ex the exception that got thrown during handler execution
-	 * @return a corresponding ModelAndView to forward to, or <code>null</code> for default processing
+	 * @return a corresponding {@code ModelAndView} to forward to,
+	 * or {@code null} for default processing in the resolution chain
 	 */
 	@Override
-	protected ModelAndView doResolveException(HttpServletRequest request,
-			HttpServletResponse response,
-			Object handler,
-			Exception ex) {
+	@Nullable
+	protected ModelAndView doResolveException(
+			HttpServletRequest request, HttpServletResponse response, @Nullable Object handler, Exception ex) {
 
 		// Expose ModelAndView for chosen error view.
 		String viewName = determineViewName(ex, request);
@@ -191,8 +208,9 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	 * {@link #setDefaultErrorView "defaultErrorView"} as a fallback.
 	 * @param ex the exception that got thrown during handler execution
 	 * @param request current HTTP request (useful for obtaining metadata)
-	 * @return the resolved view name, or <code>null</code> if excluded or none found
+	 * @return the resolved view name, or {@code null} if excluded or none found
 	 */
+	@Nullable
 	protected String determineViewName(Exception ex, HttpServletRequest request) {
 		String viewName = null;
 		if (this.excludedExceptions != null) {
@@ -209,8 +227,7 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 		// Return default error view else, if defined.
 		if (viewName == null && this.defaultErrorView != null) {
 			if (logger.isDebugEnabled()) {
-				logger.debug("Resolving to default view '" + this.defaultErrorView + "' for exception of type [" +
-						ex.getClass().getName() + "]");
+				logger.debug("Resolving to default view '" + this.defaultErrorView + "'");
 			}
 			viewName = this.defaultErrorView;
 		}
@@ -221,9 +238,10 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	 * Find a matching view name in the given exception mappings.
 	 * @param exceptionMappings mappings between exception class names and error view names
 	 * @param ex the exception that got thrown during handler execution
-	 * @return the view name, or <code>null</code> if none found
+	 * @return the view name, or {@code null} if none found
 	 * @see #setExceptionMappings
 	 */
+	@Nullable
 	protected String findMatchingViewName(Properties exceptionMappings, Exception ex) {
 		String viewName = null;
 		String dominantMapping = null;
@@ -231,15 +249,15 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 		for (Enumeration<?> names = exceptionMappings.propertyNames(); names.hasMoreElements();) {
 			String exceptionMapping = (String) names.nextElement();
 			int depth = getDepth(exceptionMapping, ex);
-			if (depth >= 0 && depth < deepest) {
+			if (depth >= 0 && (depth < deepest || (depth == deepest &&
+					dominantMapping != null && exceptionMapping.length() > dominantMapping.length()))) {
 				deepest = depth;
 				dominantMapping = exceptionMapping;
 				viewName = exceptionMappings.getProperty(exceptionMapping);
 			}
 		}
 		if (viewName != null && logger.isDebugEnabled()) {
-			logger.debug("Resolving to view '" + viewName + "' for exception of type [" + ex.getClass().getName() +
-					"], based on exception mapping [" + dominantMapping + "]");
+			logger.debug("Resolving to view '" + viewName + "' based on mapping [" + dominantMapping + "]");
 		}
 		return viewName;
 	}
@@ -259,7 +277,7 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 			return depth;
 		}
 		// If we've gone as far as we can go and haven't found it...
-		if (exceptionClass.equals(Throwable.class)) {
+		if (exceptionClass == Throwable.class) {
 			return -1;
 		}
 		return getDepth(exceptionMapping, exceptionClass.getSuperclass(), depth + 1);
@@ -273,11 +291,12 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	 * <p>Override this in a custom subclass to customize this behavior.
 	 * @param request current HTTP request
 	 * @param viewName the name of the error view
-	 * @return the HTTP status code to use, or <code>null</code> for the servlet container's default
+	 * @return the HTTP status code to use, or {@code null} for the servlet container's default
 	 * (200 in case of a standard error view)
 	 * @see #setDefaultStatusCode
 	 * @see #applyStatusCodeIfPossible
 	 */
+	@Nullable
 	protected Integer determineStatusCode(HttpServletRequest request, String viewName) {
 		if (this.statusCodes.containsKey(viewName)) {
 			return this.statusCodes.get(viewName);
@@ -298,7 +317,7 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	protected void applyStatusCodeIfPossible(HttpServletRequest request, HttpServletResponse response, int statusCode) {
 		if (!WebUtils.isIncludeRequest(request)) {
 			if (logger.isDebugEnabled()) {
-				logger.debug("Applying HTTP status code " + statusCode);
+				logger.debug("Applying HTTP status " + statusCode);
 			}
 			response.setStatus(statusCode);
 			request.setAttribute(WebUtils.ERROR_STATUS_CODE_ATTRIBUTE, statusCode);
@@ -329,9 +348,6 @@ public class SimpleMappingExceptionResolver extends AbstractHandlerExceptionReso
 	protected ModelAndView getModelAndView(String viewName, Exception ex) {
 		ModelAndView mv = new ModelAndView(viewName);
 		if (this.exceptionAttribute != null) {
-			if (logger.isDebugEnabled()) {
-				logger.debug("Exposing Exception as model attribute '" + this.exceptionAttribute + "'");
-			}
 			mv.addObject(this.exceptionAttribute, ex);
 		}
 		return mv;
